--- a/Psychologie.mw
+++ b/Psychologie.mw
@@ -22,3 +22,109 @@ De psychologie bestudèrt de mens van by zyn gebôorte toe in ze graf (en de par
 De reekse is eigentlik schier ounendig, want der is ook nog godsdienst-, ounderwys-, neuro-, experimentele, gevangenis-, test-, kiender-, bêesten-, socio-, sport- en differentiële psychologie en doamee loaten me der nog vele ounvermeld.
 
 [[Categorie: Weetnschap]]
+
+[[af:Sielkunde]]
+[[an:Sicolochía]]
+[[ar:علم النفس]]
+[[ast:Sicoloxía]]
+[[bat-smg:Psėchologėjė]]
+[[be:Псіхалогія]]
+[[bg:Психология]]
+[[bn:মনোবিজ্ঞান]]
+[[br:Bredoniezh]]
+[[bs:Psihologija]]
+[[ca:Psicologia]]
+[[ceb:Sikolohiya]]
+[[cs:Psychologie]]
+[[csb:Psychòlogijô]]
+[[cv:Психологи]]
+[[cy:Seicoleg]]
+[[da:Psykologi]]
+[[de:Psychologie]]
+[[diq:Psikolociye]]
+[[el:Ψυχολογία]]
+[[en:Psychology]]
+[[eo:Psikologio]]
+[[es:Psicología]]
+[[et:Psühholoogia]]
+[[eu:Psikologia]]
+[[fa:روان‌شناسی]]
+[[fi:Psykologia]]
+[[fiu-vro:Psükoloogia]]
+[[fr:Psychologie]]
+[[fur:Psicologjie]]
+[[fy:Psychology]]
+[[ga:Síceolaíocht]]
+[[gd:Eòlas-inntinn]]
+[[gl:Psicoloxía]]
+[[he:פסיכולוגיה]]
+[[hi:मानस शास्त्र]]
+[[hr:Psihologija]]
+[[hu:Pszichológia]]
+[[hy:Հոգեբանություն]]
+[[ia:Psychologia]]
+[[id:Psikologi]]
+[[io:Psikologio]]
+[[is:Sálfræði]]
+[[it:Psicologia]]
+[[ja:心理学]]
+[[jbo:menske]]
+[[jv:Psikologi]]
+[[ka:ფსიქოლოგია]]
+[[kk:Психология]]
+[[ko:심리학]]
+[[ku:Psîkolojî]]
+[[ky:Психология]]
+[[la:Psychologia]]
+[[lad:Psikolojiya]]
+[[lb:Psychologie]]
+[[li:Psychologie]]
+[[lij:Psicologia]]
+[[lo:ຈິດຕະວິທະຍາ]]
+[[lt:Psichologija]]
+[[lv:Psiholoģija]]
+[[mg:Psychology]]
+[[mk:Психологија]]
+[[ml:മനഃശാസ്ത്രം]]
+[[mr:मानसशास्त्र]]
+[[ms:Psikologi]]
+[[mt:Psikoloġija]]
+[[nap:Psicologgia]]
+[[nl:Psychologie]]
+[[nn:Psykologi]]
+[[no:Psykologi]]
+[[nov:Psikologia]]
+[[nrm:Psychologie]]
+[[oc:Psicologia]]
+[[pi:चिन्तनशास्त्र]]
+[[pl:Psychologia]]
+[[ps:ساپوهنه]]
+[[pt:Psicologia]]
+[[qu:Nuna yachay]]
+[[ro:Psihologie]]
+[[ru:Психология]]
+[[sc:Psicologia]]
+[[scn:Psicoluggìa]]
+[[sh:Psihologija]]
+[[simple:Psychology]]
+[[sk:Psychológia]]
+[[sl:Psihologija]]
+[[sm:Saikolosi]]
+[[sq:Psikologjia]]
+[[sr:Психологија]]
+[[su:Psikologi]]
+[[sv:Psykologi]]
+[[ta:உளவியல்]]
+[[th:จิตวิทยา]]
+[[tl:Sikolohiya]]
+[[tpi:Saikolosi]]
+[[tr:Psikoloji]]
+[[uk:Психологія]]
+[[ur:نفسیات]]
+[[vec:Sicołogia]]
+[[vi:Tâm lý học]]
+[[war:Psikolohiya]]
+[[yi:פסיכאלאגיע]]
+[[zh:心理学]]
+[[zh-min-nan:Sim-lí-ha̍k]]
+[[zh-yue:心理學]]
