--- a/Radio_2.mw
+++ b/Radio_2.mw
@@ -18,4 +18,4 @@ In [[West-Vloandern]] keun je Radio beluustern ip 100.1Mhz.
 [[Categorie:Radio]]
 
 [[fr:Radio Twee]]
-[[vls:Radio 2 (Vlaanderen)]]
+[[nl:Radio 2 (Vlaanderen)]]
