--- a/Raymond_Brulez.mw
+++ b/Raymond_Brulez.mw
@@ -30,3 +30,5 @@ Z'n bekendste literair werk is de tetralogie: 'Mijn woningen' (1950-1954). Vor '
 
 [[Categorie:West-Vlamsche schryver|Brulez, Raymond]]
 [[Categorie:Blanknberge|Brulez,Raymond]]
+
+[[nl:Raymond Brulez]]
