--- a/Receptor.mw
+++ b/Receptor.mw
@@ -9,3 +9,25 @@ Er zyn verschillige soortn receptoorn.
 en nog vele meer.
 
 [[Categorie: Moleculaire biologie]]
+
+[[ar:مستقبل (كيمياء حيوية)]]
+[[cs:Receptor]]
+[[da:Receptor]]
+[[de:Rezeptor]]
+[[en:Receptor (biochemistry)]]
+[[es:Receptor celular]]
+[[fi:Reseptori (biokemia)]]
+[[fr:Récepteur (biochimie)]]
+[[he:קולטן]]
+[[it:Recettore]]
+[[ja:受容体]]
+[[nl:Receptor]]
+[[pl:Receptor]]
+[[ro:Receptor (biochimie)]]
+[[ru:Рецептор]]
+[[sk:Receptor]]
+[[sl:Receptor (biokemija)]]
+[[sv:Receptor]]
+[[th:รีเซพเตอร์]]
+[[uk:Рецептор]]
+[[zh:受体]]
