--- a/11_december.mw
+++ b/11_december.mw
@@ -3,3 +3,116 @@
 *[[1582]] - [[Fernando Álvarez de Toledo]]
 
 [[Categorie: Datum]]
+
+[[af:11 Desember]]
+[[an:11 d'abiento]]
+[[ang:11 Gēolmōnaþ]]
+[[ar:11 ديسمبر]]
+[[ast:11 d'avientu]]
+[[az:11 dekabr]]
+[[bat-smg:Groudė 11]]
+[[be:11 снежня]]
+[[be-x-old:11 сьнежня]]
+[[bg:11 декември]]
+[[bn:ডিসেম্বর ১১]]
+[[bpy:ডিসেম্বর ১১]]
+[[br:11 Kerzu]]
+[[bs:11. decembar]]
+[[ca:11 de desembre]]
+[[ceb:Disyembre 11]]
+[[co:11 di decembre]]
+[[cs:11. prosinec]]
+[[csb:11 gòdnika]]
+[[cv:Раштав, 11]]
+[[cy:11 Rhagfyr]]
+[[da:11. december]]
+[[de:11. Dezember]]
+[[el:11 Δεκεμβρίου]]
+[[en:December 11]]
+[[eo:11-a de decembro]]
+[[es:11 de diciembre]]
+[[et:11. detsember]]
+[[eu:Abenduaren 11]]
+[[fa:۱۱ دسامبر]]
+[[fi:11. joulukuuta]]
+[[fiu-vro:11. joulukuu päiv]]
+[[fo:11. desember]]
+[[fr:11 décembre]]
+[[frp:11 dècembro]]
+[[fur:11 di Dicembar]]
+[[fy:11 desimber]]
+[[ga:11 Nollaig]]
+[[gd:11 an Dùbhlachd]]
+[[gl:11 de decembro]]
+[[gv:11 Mee ny Nollick]]
+[[he:11 בדצמבר]]
+[[hi:11 दिसंबर]]
+[[hr:11. prosinca]]
+[[ht:11 desanm]]
+[[hu:December 11]]
+[[hy:Դեկտեմբերի 11]]
+[[ia:11 de decembre]]
+[[id:11 Desember]]
+[[io:11 di decembro]]
+[[is:11. desember]]
+[[it:11 dicembre]]
+[[ja:12月11日]]
+[[jv:11 Desember]]
+[[ka:11 დეკემბერი]]
+[[kab:11 ctember]]
+[[kk:Желтоқсанның 11]]
+[[kn:ಡಿಸೆಂಬರ್ ೧೧]]
+[[ko:12월 11일]]
+[[ksh:11. Dezemmber]]
+[[ku:11'ê berfanbarê]]
+[[la:11 Decembris]]
+[[lb:11. Dezember]]
+[[lmo:11 12]]
+[[lt:Gruodžio 11]]
+[[mk:11 декември]]
+[[ml:ഡിസംബര്‍ 11]]
+[[ms:11 Disember]]
+[[nah:Tlamahtlācōnti 11]]
+[[nap:11 'e dicembre]]
+[[nds:11. Dezember]]
+[[nds-nl:11 december]]
+[[nl:11 december]]
+[[nn:11. desember]]
+[[no:11. desember]]
+[[nov:11 de desembre]]
+[[nrm:11 Dézembre]]
+[[oc:11 de decembre]]
+[[pag:December 11]]
+[[pam:Disiembri 11]]
+[[pl:11 grudnia]]
+[[pt:11 de Dezembro]]
+[[ro:11 decembrie]]
+[[ru:11 декабря]]
+[[scn:11 di dicèmmiru]]
+[[sco:11 December]]
+[[se:Juovlamánu 11.]]
+[[sh:11.12.]]
+[[simple:December 11]]
+[[sk:11. december]]
+[[sl:11. december]]
+[[sq:11 Dhjetor]]
+[[sr:11. децембар]]
+[[su:11 Désémber]]
+[[sv:11 december]]
+[[sw:11 Desemba]]
+[[ta:டிசம்பர் 11]]
+[[te:డిసెంబర్ 11]]
+[[th:11 ธันวาคม]]
+[[tl:Disyembre 11]]
+[[tr:11 Aralık]]
+[[tt:11. Dekäber]]
+[[uk:11 грудня]]
+[[uz:11 dekabr]]
+[[vec:11 de diçenbre]]
+[[vi:11 tháng 12]]
+[[vo:Dekul 11]]
+[[wa:11 di decimbe]]
+[[war:Disyembre 11]]
+[[yo:11 December]]
+[[zh:12月11日]]
+[[zh-yue:12月11號]]
