--- a/12_juni.mw
+++ b/12_juni.mw
@@ -3,3 +3,119 @@
 *[[1978]] - [[Brian Lynch]]
 
 [[Categorie: Datum]]
+
+[[af:12 Junie]]
+[[an:12 de chunio]]
+[[ar:12 يونيو]]
+[[ast:12 de xunu]]
+[[az:12 İyun]]
+[[bat-smg:Bėrželė 12]]
+[[be:12 чэрвеня]]
+[[be-x-old:12 чэрвеня]]
+[[bg:12 юни]]
+[[bn:জুন ১২]]
+[[bpy:জুন ১২]]
+[[br:12 Mezheven]]
+[[bs:12. juni]]
+[[ca:12 de juny]]
+[[ceb:Hunyo 12]]
+[[co:12 di ghjugnu]]
+[[cs:12. červen]]
+[[csb:12 czerwińca]]
+[[cv:Çĕртме, 12]]
+[[cy:12 Mehefin]]
+[[da:12. juni]]
+[[de:12. Juni]]
+[[dv:ޖޫން 12]]
+[[el:12 Ιουνίου]]
+[[en:June 12]]
+[[eo:12-a de junio]]
+[[es:12 de junio]]
+[[et:12. juuni]]
+[[eu:Ekainaren 12]]
+[[fa:۱۲ ژوئن]]
+[[fi:12. kesäkuuta]]
+[[fiu-vro:12. piimäkuu päiv]]
+[[fo:12. juni]]
+[[fr:12 juin]]
+[[frp:12 jouen]]
+[[fur:12 di Jugn]]
+[[fy:12 juny]]
+[[ga:12 Meitheamh]]
+[[gd:12 an t-Og-mhios]]
+[[gl:12 de xuño]]
+[[gv:12 Mean Souree]]
+[[he:12 ביוני]]
+[[hr:12. lipnja]]
+[[ht:12 jen]]
+[[hu:Június 12]]
+[[ia:12 de junio]]
+[[id:12 Juni]]
+[[ie:12 junio]]
+[[ilo:Junio 12]]
+[[io:12 di junio]]
+[[is:12. júní]]
+[[it:12 giugno]]
+[[ja:6月12日]]
+[[jv:12 Juni]]
+[[ka:12 ივნისი]]
+[[kk:Маусымның 12]]
+[[kn:ಜೂನ್ ೧೨]]
+[[ko:6월 12일]]
+[[ksh:12. Juuni]]
+[[ku:12'ê pûşperê]]
+[[la:12 Iunii]]
+[[lb:12. Juni]]
+[[lmo:12 06]]
+[[lt:Birželio 12]]
+[[mg:12 Jiona]]
+[[mk:12 јуни]]
+[[ml:ജൂണ്‍ 12]]
+[[ms:12 Jun]]
+[[nah:Tlachicuazti 12]]
+[[nap:12 'e giùgno]]
+[[nds:12. Juni]]
+[[nds-nl:12 juni]]
+[[new:जुन १२]]
+[[nl:12 juni]]
+[[nn:12. juni]]
+[[no:12. juni]]
+[[nov:12 de june]]
+[[nrm:12 Juîn]]
+[[oc:12 de junh]]
+[[os:12 июны]]
+[[pag:June 12]]
+[[pam:Juniu 12]]
+[[pl:12 czerwca]]
+[[pt:12 de Junho]]
+[[ro:12 iunie]]
+[[ru:12 июня]]
+[[scn:12 di giugnu]]
+[[sco:12 Juin]]
+[[se:Geassemánu 12.]]
+[[sh:12.6.]]
+[[simple:June 12]]
+[[sk:12. jún]]
+[[sl:12. junij]]
+[[sq:12 Qershor]]
+[[sr:12. јун]]
+[[su:12 Juni]]
+[[sv:12 juni]]
+[[sw:12 Juni]]
+[[ta:ஜூன் 12]]
+[[te:జూన్ 12]]
+[[tg:12 июн]]
+[[th:12 มิถุนายน]]
+[[tl:Hunyo 12]]
+[[tr:12 Haziran]]
+[[tt:12. Yün]]
+[[uk:12 червня]]
+[[uz:12 iyun]]
+[[vec:12 de giugno]]
+[[vi:12 tháng 6]]
+[[vo:Yunul 12]]
+[[wa:12 di djun]]
+[[war:Hunyo 12]]
+[[yo:12 June]]
+[[zh:6月12日]]
+[[zh-yue:6月12號]]
