--- a/13_juli.mw
+++ b/13_juli.mw
@@ -3,3 +3,115 @@
 *[[1621]] - [[Albrecht van Oostnryk]]
 
 [[Categorie:Datum]]
+
+[[af:13 Julie]]
+[[an:13 de chulio]]
+[[ar:13 يوليو]]
+[[ast:13 de xunetu]]
+[[az:13 İyul]]
+[[bat-smg:Lėipas 13]]
+[[be:13 ліпеня]]
+[[be-x-old:13 ліпеня]]
+[[bg:13 юли]]
+[[bpy:জুলাই ১৩]]
+[[br:13 Gouere]]
+[[bs:13. juli]]
+[[ca:13 de juliol]]
+[[ceb:Hulyo 13]]
+[[co:13 di lugliu]]
+[[cs:13. červenec]]
+[[csb:13 lëpinca]]
+[[cv:Утă, 13]]
+[[cy:13 Gorffennaf]]
+[[da:13. juli]]
+[[de:13. Juli]]
+[[el:13 Ιουλίου]]
+[[en:July 13]]
+[[eo:13-a de julio]]
+[[es:13 de julio]]
+[[et:13. juuli]]
+[[eu:Uztailaren 13]]
+[[fa:۱۳ ژوئیه]]
+[[fi:13. heinäkuuta]]
+[[fiu-vro:13. hainakuu päiv]]
+[[fo:13. juli]]
+[[fr:13 juillet]]
+[[frp:13 j·ulyèt]]
+[[fur:13 di Lui]]
+[[fy:13 july]]
+[[ga:13 Iúil]]
+[[gd:13 an t-Iuchar]]
+[[gl:13 de xullo]]
+[[gv:13 Jerrey Souree]]
+[[he:13 ביולי]]
+[[hr:13. srpnja]]
+[[ht:13 jiyè]]
+[[hu:Július 13]]
+[[ia:13 de julio]]
+[[id:13 Juli]]
+[[ilo:Julio 13]]
+[[io:13 di julio]]
+[[is:13. júlí]]
+[[it:13 luglio]]
+[[ja:7月13日]]
+[[jv:13 Juli]]
+[[ka:13 ივლისი]]
+[[kk:Шілденің 13]]
+[[kn:ಜುಲೈ ೧೩]]
+[[ko:7월 13일]]
+[[ksh:13. Juuli]]
+[[ku:13'ê tîrmehê]]
+[[la:13 Iulii]]
+[[lb:13. Juli]]
+[[li:13 juli]]
+[[lmo:13 07]]
+[[lt:Liepos 13]]
+[[mk:13 јули]]
+[[ml:ജൂലൈ 13]]
+[[mr:जुलै १३]]
+[[ms:13 Julai]]
+[[nah:Tlachicōnti 13]]
+[[nap:13 'e luglio]]
+[[nds:13. Juli]]
+[[nds-nl:13 juli]]
+[[nl:13 juli]]
+[[nn:13. juli]]
+[[no:13. juli]]
+[[nov:13 de julie]]
+[[nrm:13 Juilet]]
+[[oc:13 de julhet]]
+[[pag:July 13]]
+[[pam:Juliu 13]]
+[[pl:13 lipca]]
+[[pt:13 de Julho]]
+[[ro:13 iulie]]
+[[ru:13 июля]]
+[[scn:13 di giugnettu]]
+[[sco:13 Julie]]
+[[se:Suoidnemánu 13.]]
+[[sh:13.7.]]
+[[simple:July 13]]
+[[sk:13. júl]]
+[[sl:13. julij]]
+[[sq:13 Korrik]]
+[[sr:13. јул]]
+[[su:13 Juli]]
+[[sv:13 juli]]
+[[sw:13 Julai]]
+[[ta:ஜூலை 13]]
+[[te:జూలై 13]]
+[[tg:13 июл]]
+[[th:13 กรกฎาคม]]
+[[tl:Hulyo 13]]
+[[tr:13 Temmuz]]
+[[tt:13. Yül]]
+[[uk:13 липня]]
+[[uz:13 iyul]]
+[[vec:13 de lujo]]
+[[vi:13 tháng 7]]
+[[vo:Yulul 13]]
+[[wa:13 di djulete]]
+[[war:Hulyo 13]]
+[[yo:13 July]]
+[[zh:7月13日]]
+[[zh-yue:7月13號]]
