--- a/15_november.mw
+++ b/15_november.mw
@@ -3,3 +3,112 @@
 *[[1559]] - [[Albrecht van Oostnryk]]
 
 [[Categorie:Datum]]
+
+[[af:15 November]]
+[[an:15 de nobiembre]]
+[[ar:15 نوفمبر]]
+[[ast:15 de payares]]
+[[bat-smg:Lapkristė 15]]
+[[be:15 лістапада]]
+[[be-x-old:15 лістапада]]
+[[bg:15 ноември]]
+[[bn:নভেম্বর ১৫]]
+[[bpy:নভেম্বর ১৫]]
+[[br:15 Du]]
+[[bs:15. novembar]]
+[[ca:15 de novembre]]
+[[ceb:Nobiyembre 15]]
+[[co:15 nuvembri]]
+[[cs:15. listopad]]
+[[csb:15 lëstopadnika]]
+[[cv:Чӳк, 15]]
+[[cy:15 Tachwedd]]
+[[da:15. november]]
+[[de:15. November]]
+[[el:15 Νοεμβρίου]]
+[[en:November 15]]
+[[eo:15-a de novembro]]
+[[es:15 de noviembre]]
+[[et:15. november]]
+[[eu:Azaroaren 15]]
+[[fa:۱۵ نوامبر]]
+[[fi:15. marraskuuta]]
+[[fiu-vro:15. märtekuu päiv]]
+[[fo:15. november]]
+[[fr:15 novembre]]
+[[frp:15 novembro]]
+[[fur:15 di Novembar]]
+[[fy:15 novimber]]
+[[ga:15 Samhain]]
+[[gd:15 an t-Samhain]]
+[[gl:15 de novembro]]
+[[gv:15 Mee Houney]]
+[[he:15 בנובמבר]]
+[[hi:15 नवंबर]]
+[[hr:15. studenog]]
+[[ht:15 novanm]]
+[[hu:November 15]]
+[[hy:Նոյեմբերի 15]]
+[[ia:15 de novembre]]
+[[id:15 November]]
+[[io:15 di novembro]]
+[[is:15. nóvember]]
+[[it:15 novembre]]
+[[ja:11月15日]]
+[[jv:15 November]]
+[[ka:15 ნოემბერი]]
+[[kk:Қарашаның 15]]
+[[kn:ನವೆಂಬರ್ ೧೫]]
+[[ko:11월 15일]]
+[[ksh:15. Novemmber]]
+[[ku:15'ê sermawezê]]
+[[la:15 Novembris]]
+[[lb:15. November]]
+[[lmo:15 11]]
+[[lt:Lapkričio 15]]
+[[mk:15 ноември]]
+[[mr:नोव्हेंबर १५]]
+[[ms:15 November]]
+[[nap:15 'e nuvembre]]
+[[nds:15. November]]
+[[nds-nl:15 november]]
+[[nl:15 november]]
+[[nn:15. november]]
+[[no:15. november]]
+[[nov:15 de novembre]]
+[[nrm:15 Novembre]]
+[[oc:15 de novembre]]
+[[pag:November 15]]
+[[pam:Nobiembri 15]]
+[[pl:15 listopada]]
+[[pt:15 de Novembro]]
+[[ro:15 noiembrie]]
+[[ru:15 ноября]]
+[[scn:15 di nuvèmmiru]]
+[[sco:15 November]]
+[[se:Skábmamánu 15.]]
+[[sh:15.11.]]
+[[simple:November 15]]
+[[sk:15. november]]
+[[sl:15. november]]
+[[sq:15 Nëntor]]
+[[sr:15. новембар]]
+[[su:15 Nopémber]]
+[[sv:15 november]]
+[[sw:15 Novemba]]
+[[ta:நவம்பர் 15]]
+[[te:నవంబర్ 15]]
+[[th:15 พฤศจิกายน]]
+[[tl:Nobyembre 15]]
+[[tr:15 Kasım]]
+[[tt:15. Nöyäber]]
+[[uk:15 листопада]]
+[[uz:15 noyabr]]
+[[vec:15 de novenbre]]
+[[vi:15 tháng 11]]
+[[vo:Novul 15]]
+[[wa:15 di nôvimbe]]
+[[war:Nobyembre 15]]
+[[yo:15 November]]
+[[zh:11月15日]]
+[[zh-yue:11月15號]]
