--- a/17_november.mw
+++ b/17_november.mw
@@ -3,3 +3,110 @@
 *[[1587]] - [[Joost van den Vondel]]
 
 [[Categorie: Datum]]
+
+[[af:17 November]]
+[[an:17 de nobiembre]]
+[[ar:17 نوفمبر]]
+[[ast:17 de payares]]
+[[bat-smg:Lapkristė 17]]
+[[be:17 лістапада]]
+[[be-x-old:17 лістапада]]
+[[bg:17 ноември]]
+[[bn:নভেম্বর ১৭]]
+[[bpy:নভেম্বর ১৭]]
+[[br:17 Du]]
+[[bs:17. novembar]]
+[[ca:17 de novembre]]
+[[ceb:Nobiyembre 17]]
+[[co:17 nuvembri]]
+[[cs:17. listopad]]
+[[csb:17 lëstopadnika]]
+[[cv:Чӳк, 17]]
+[[cy:17 Tachwedd]]
+[[da:17. november]]
+[[de:17. November]]
+[[el:17 Νοεμβρίου]]
+[[en:November 17]]
+[[eo:17-a de novembro]]
+[[es:17 de noviembre]]
+[[et:17. november]]
+[[eu:Azaroaren 17]]
+[[fa:۱۷ نوامبر]]
+[[fi:17. marraskuuta]]
+[[fiu-vro:17. märtekuu päiv]]
+[[fo:17. november]]
+[[fr:17 novembre]]
+[[frp:17 novembro]]
+[[fur:17 di Novembar]]
+[[fy:17 novimber]]
+[[ga:17 Samhain]]
+[[gd:17 an t-Samhain]]
+[[gl:17 de novembro]]
+[[gv:17 Mee Houney]]
+[[he:17 בנובמבר]]
+[[hi:17 नवंबर]]
+[[hr:17. studenog]]
+[[ht:17 novanm]]
+[[hu:November 17]]
+[[hy:Նոյեմբերի 17]]
+[[ia:17 de novembre]]
+[[id:17 November]]
+[[io:17 di novembro]]
+[[is:17. nóvember]]
+[[it:17 novembre]]
+[[ja:11月17日]]
+[[jv:17 November]]
+[[ka:17 ნოემბერი]]
+[[kk:Қарашаның 17]]
+[[kn:ನವೆಂಬರ್ ೧೭]]
+[[ko:11월 17일]]
+[[ksh:17. Novemmber]]
+[[ku:17'ê sermawezê]]
+[[la:17 Novembris]]
+[[lb:17. November]]
+[[lmo:17 11]]
+[[lt:Lapkričio 17]]
+[[mk:17 ноември]]
+[[ms:17 November]]
+[[nap:17 'e nuvembre]]
+[[nds-nl:17 november]]
+[[nl:17 november]]
+[[nn:17. november]]
+[[no:17. november]]
+[[nov:17 de novembre]]
+[[nrm:17 Novembre]]
+[[oc:17 de novembre]]
+[[pag:November 17]]
+[[pam:Nobiembri 17]]
+[[pl:17 listopada]]
+[[pt:17 de Novembro]]
+[[ro:17 noiembrie]]
+[[ru:17 ноября]]
+[[scn:17 di nuvèmmiru]]
+[[sco:17 November]]
+[[se:Skábmamánu 17.]]
+[[sh:17.11.]]
+[[simple:November 17]]
+[[sk:17. november]]
+[[sl:17. november]]
+[[sq:17 Nëntor]]
+[[sr:17. новембар]]
+[[su:17 Nopémber]]
+[[sv:17 november]]
+[[sw:17 Novemba]]
+[[ta:நவம்பர் 17]]
+[[te:నవంబర్ 17]]
+[[th:17 พฤศจิกายน]]
+[[tl:Nobyembre 17]]
+[[tr:17 Kasım]]
+[[tt:17. Nöyäber]]
+[[uk:17 листопада]]
+[[uz:17 noyabr]]
+[[vec:17 de novenbre]]
+[[vi:17 tháng 11]]
+[[vo:Novul 17]]
+[[wa:17 di nôvimbe]]
+[[war:Nobyembre 17]]
+[[yo:17 November]]
+[[zh:11月17日]]
+[[zh-yue:11月17號]]
