--- a/20_juni.mw
+++ b/20_juni.mw
@@ -5,3 +5,117 @@
 * [[1819]] [[Jacques Offenbach]]
 
 [[Categorie:Datum]]
+
+[[af:20 Junie]]
+[[an:20 de chunio]]
+[[ar:20 يونيو]]
+[[ast:20 de xunu]]
+[[bat-smg:Bėrželė 20]]
+[[be:20 чэрвеня]]
+[[be-x-old:20 чэрвеня]]
+[[bg:20 юни]]
+[[bn:জুন ২০]]
+[[bpy:জুন ২০]]
+[[br:20 Mezheven]]
+[[bs:20. juni]]
+[[ca:20 de juny]]
+[[ceb:Hunyo 20]]
+[[co:20 di ghjugnu]]
+[[cs:20. červen]]
+[[csb:20 czerwińca]]
+[[cv:Çĕртме, 20]]
+[[cy:20 Mehefin]]
+[[da:20. juni]]
+[[de:20. Juni]]
+[[el:20 Ιουνίου]]
+[[en:June 20]]
+[[eo:20-a de junio]]
+[[es:20 de junio]]
+[[et:20. juuni]]
+[[eu:Ekainaren 20]]
+[[fa:۲۰ ژوئن]]
+[[fi:20. kesäkuuta]]
+[[fiu-vro:20. piimäkuu päiv]]
+[[fo:20. juni]]
+[[fr:20 juin]]
+[[frp:20 jouen]]
+[[fur:20 di Jugn]]
+[[fy:20 juny]]
+[[ga:20 Meitheamh]]
+[[gd:20 an t-Og-mhios]]
+[[gl:20 de xuño]]
+[[gv:20 Mean Souree]]
+[[he:20 ביוני]]
+[[hi:20 जून]]
+[[hr:20. lipnja]]
+[[ht:20 jen]]
+[[hu:Június 20]]
+[[ia:20 de junio]]
+[[id:20 Juni]]
+[[ie:20 junio]]
+[[ig:June 20]]
+[[ilo:Junio 20]]
+[[io:20 di junio]]
+[[is:20. júní]]
+[[it:20 giugno]]
+[[ja:6月20日]]
+[[jv:20 Juni]]
+[[ka:20 ივნისი]]
+[[kk:Маусымның 20]]
+[[kn:ಜೂನ್ ೨೦]]
+[[ko:6월 20일]]
+[[ksh:20. Juuni]]
+[[ku:20'ê pûşperê]]
+[[la:20 Iunii]]
+[[lb:20. Juni]]
+[[li:20 juni]]
+[[lmo:20 06]]
+[[lt:Birželio 20]]
+[[mk:20 јуни]]
+[[ml:ജൂണ്‍ 20]]
+[[mr:जून २०]]
+[[ms:20 Jun]]
+[[nah:Tlachicuazti 20]]
+[[nap:20 'e giùgno]]
+[[nds:20. Juni]]
+[[nds-nl:20 juni]]
+[[new:जुन २०]]
+[[nl:20 juni]]
+[[nn:20. juni]]
+[[no:20. juni]]
+[[nov:20 de june]]
+[[nrm:20 Juîn]]
+[[oc:20 de junh]]
+[[pag:June 20]]
+[[pam:Juniu 20]]
+[[pl:20 czerwca]]
+[[pt:20 de Junho]]
+[[ro:20 iunie]]
+[[ru:20 июня]]
+[[scn:20 di giugnu]]
+[[sco:20 Juin]]
+[[se:Geassemánu 20.]]
+[[sh:20.6.]]
+[[simple:June 20]]
+[[sk:20. jún]]
+[[sl:20. junij]]
+[[sq:20 Qershor]]
+[[sr:20. јун]]
+[[su:20 Juni]]
+[[sv:20 juni]]
+[[sw:20 Juni]]
+[[ta:ஜூன் 20]]
+[[te:జూన్ 20]]
+[[th:20 มิถุนายน]]
+[[tl:Hunyo 20]]
+[[tr:20 Haziran]]
+[[tt:20. Yün]]
+[[uk:20 червня]]
+[[uz:20 iyun]]
+[[vec:20 de giugno]]
+[[vi:20 tháng 6]]
+[[vo:Yunul 20]]
+[[wa:20 d' djun]]
+[[war:Hunyo 20]]
+[[zh:6月20日]]
+[[zh-yue:6月20號]]
