--- a/21_juni.mw
+++ b/21_juni.mw
@@ -8,3 +8,117 @@
 *[[1982]] - [[Joerie Vansteelant]]
 
 [[Categorie:Datum]]
+
+[[af:21 Junie]]
+[[an:21 de chunio]]
+[[ar:21 يونيو]]
+[[ast:21 de xunu]]
+[[bat-smg:Bėrželė 21]]
+[[be:21 чэрвеня]]
+[[be-x-old:21 чэрвеня]]
+[[bg:21 юни]]
+[[bn:জুন ২১]]
+[[bpy:জুন ২১]]
+[[br:21 Mezheven]]
+[[bs:21. juni]]
+[[ca:21 de juny]]
+[[ceb:Hunyo 21]]
+[[co:21 di ghjugnu]]
+[[cs:21. červen]]
+[[csb:21 czerwińca]]
+[[cv:Çĕртме, 21]]
+[[cy:21 Mehefin]]
+[[da:21. juni]]
+[[de:21. Juni]]
+[[el:21 Ιουνίου]]
+[[en:June 21]]
+[[eo:21-a de junio]]
+[[es:21 de junio]]
+[[et:21. juuni]]
+[[eu:Ekainaren 21]]
+[[fa:۲۱ ژوئن]]
+[[fi:21. kesäkuuta]]
+[[fiu-vro:21. piimäkuu päiv]]
+[[fo:21. juni]]
+[[fr:21 juin]]
+[[frp:21 jouen]]
+[[fur:21 di Jugn]]
+[[fy:21 juny]]
+[[ga:21 Meitheamh]]
+[[gd:21 an t-Og-mhios]]
+[[gl:21 de xuño]]
+[[gv:21 Mean Souree]]
+[[he:21 ביוני]]
+[[hi:21 जून]]
+[[hr:21. lipnja]]
+[[ht:21 jen]]
+[[hu:Június 21]]
+[[ia:21 de junio]]
+[[id:21 Juni]]
+[[ie:21 junio]]
+[[ilo:Junio 21]]
+[[io:21 di junio]]
+[[is:21. júní]]
+[[it:21 giugno]]
+[[ja:6月21日]]
+[[jv:21 Juni]]
+[[ka:21 ივნისი]]
+[[kk:Маусымның 21]]
+[[kn:ಜೂನ್ ೨೧]]
+[[ko:6월 21일]]
+[[ksh:21. Juuni]]
+[[ku:21'ê pûşperê]]
+[[la:21 Iunii]]
+[[lb:21. Juni]]
+[[lmo:21 06]]
+[[lt:Birželio 21]]
+[[mi:21 Pipiri]]
+[[mk:21 јуни]]
+[[ml:ജൂണ്‍ 21]]
+[[mr:जून २१]]
+[[ms:21 Jun]]
+[[nah:Tlachicuazti 21]]
+[[nap:21 'e giùgno]]
+[[nds:21. Juni]]
+[[nds-nl:21 juni]]
+[[new:जुन २१]]
+[[nl:21 juni]]
+[[nn:21. juni]]
+[[no:21. juni]]
+[[nov:21 de june]]
+[[nrm:21 Juîn]]
+[[oc:21 de junh]]
+[[os:21 июны]]
+[[pag:June 21]]
+[[pam:Juniu 21]]
+[[pl:21 czerwca]]
+[[pt:21 de Junho]]
+[[ro:21 iunie]]
+[[ru:21 июня]]
+[[scn:21 di giugnu]]
+[[sco:21 Juin]]
+[[se:Geassemánu 21.]]
+[[sh:21.6.]]
+[[simple:June 21]]
+[[sk:21. jún]]
+[[sl:21. junij]]
+[[sq:21 Qershor]]
+[[sr:21. јун]]
+[[su:21 Juni]]
+[[sv:21 juni]]
+[[sw:21 Juni]]
+[[ta:ஜூன் 21]]
+[[te:జూన్ 21]]
+[[th:21 มิถุนายน]]
+[[tl:Hunyo 21]]
+[[tr:21 Haziran]]
+[[tt:21. Yün]]
+[[uk:21 червня]]
+[[uz:21 iyun]]
+[[vec:21 de giugno]]
+[[vi:21 tháng 6]]
+[[vo:Yunul 21]]
+[[wa:21 di djun]]
+[[war:Hunyo 21]]
+[[zh:6月21日]]
+[[zh-yue:6月21號]]
