--- a/26_oktober.mw
+++ b/26_oktober.mw
@@ -3,3 +3,113 @@
 *[[1963]] - [[Jorge Queirolo Bravo]]
 
 [[Categorie: Datum]]
+
+[[af:26 Oktober]]
+[[an:26 d'otubre]]
+[[ang:26 Winterfylleþ]]
+[[ar:26 أكتوبر]]
+[[ast:26 d'ochobre]]
+[[bat-smg:Spalė 26]]
+[[be:26 кастрычніка]]
+[[be-x-old:26 кастрычніка]]
+[[bg:26 октомври]]
+[[bn:অক্টোবর ২৬]]
+[[bpy:অক্টোবর ২৬]]
+[[br:26 Here]]
+[[bs:26. oktobar]]
+[[ca:26 d'octubre]]
+[[ceb:Oktubre 26]]
+[[co:26 uttrovi]]
+[[cs:26. říjen]]
+[[csb:26 rujana]]
+[[cv:Юпа, 26]]
+[[cy:26 Hydref]]
+[[da:26. oktober]]
+[[de:26. Oktober]]
+[[el:26 Οκτωβρίου]]
+[[en:October 26]]
+[[eo:26-a de oktobro]]
+[[es:26 de octubre]]
+[[et:26. oktoober]]
+[[eu:Urriaren 26]]
+[[fa:۲۶ اکتبر]]
+[[fi:26. lokakuuta]]
+[[fiu-vro:26. rehekuu päiv]]
+[[fo:26. oktober]]
+[[fr:26 octobre]]
+[[frp:26 octobro]]
+[[fur:26 di Otubar]]
+[[fy:26 oktober]]
+[[ga:26 Deireadh Fómhair]]
+[[gd:26 an Damhair]]
+[[gl:26 de outubro]]
+[[gv:26 Jerrey Fouyir]]
+[[he:26 באוקטובר]]
+[[hr:26. listopada]]
+[[ht:26 oktòb]]
+[[hu:Október 26]]
+[[ia:26 de octobre]]
+[[id:26 Oktober]]
+[[io:26 di oktobro]]
+[[is:26. október]]
+[[it:26 ottobre]]
+[[ja:10月26日]]
+[[jv:26 Oktober]]
+[[ka:26 ოქტომბერი]]
+[[kk:Қазанның 26]]
+[[kn:ಅಕ್ಟೋಬರ್ ೨೬]]
+[[ko:10월 26일]]
+[[ksh:26. Oktoober]]
+[[ku:26'ê kewçêrê]]
+[[la:26 Octobris]]
+[[lb:26. Oktober]]
+[[lmo:26 10]]
+[[lt:Spalio 26]]
+[[lv:26. oktobris]]
+[[mk:26 октомври]]
+[[ml:ഒക്ടോബര്‍ 26]]
+[[mr:ऑक्टोबर २६]]
+[[ms:26 Oktober]]
+[[nap:26 'e ottovre]]
+[[nds:26. Oktober]]
+[[nds-nl:26 oktober]]
+[[new:अक्टोबर २६]]
+[[nl:26 oktober]]
+[[nn:26. oktober]]
+[[no:26. oktober]]
+[[nov:26 de oktobre]]
+[[nrm:26 Octobre]]
+[[oc:26 d'octobre]]
+[[pag:October 26]]
+[[pam:Octubri 26]]
+[[pl:26 października]]
+[[pt:26 de Outubro]]
+[[ro:26 octombrie]]
+[[ru:26 октября]]
+[[scn:26 di uttùviru]]
+[[sco:26 October]]
+[[se:Golggotmánu 26.]]
+[[sh:26.10.]]
+[[simple:October 26]]
+[[sk:26. október]]
+[[sl:26. oktober]]
+[[sq:26 Tetor]]
+[[sr:26. октобар]]
+[[su:26 Oktober]]
+[[sv:26 oktober]]
+[[sw:26 Oktoba]]
+[[ta:அக்டோபர் 26]]
+[[te:అక్టోబర్ 26]]
+[[th:26 ตุลาคม]]
+[[tl:Oktubre 26]]
+[[tr:26 Ekim]]
+[[tt:26. Öktäber]]
+[[uk:26 жовтня]]
+[[uz:26 oktabr]]
+[[vec:26 de otobre]]
+[[vi:26 tháng 10]]
+[[vo:Tobul 26]]
+[[wa:26 d' octôbe]]
+[[war:Oktubre 26]]
+[[zh:10月26日]]
+[[zh-yue:10月26號]]
