--- a/28_december.mw
+++ b/28_december.mw
@@ -3,3 +3,112 @@
 *[[1522]] - [[Margaretha van Parma]]
 
 [[Categorie: Datum]]
+
+[[af:28 Desember]]
+[[an:28 d'abiento]]
+[[ar:28 ديسمبر]]
+[[ast:28 d'avientu]]
+[[az:28 dekabr]]
+[[bat-smg:Groudė 28]]
+[[be:28 снежня]]
+[[be-x-old:28 сьнежня]]
+[[bg:28 декември]]
+[[bn:ডিসেম্বর ২৮]]
+[[bpy:ডিসেম্বর ২৮]]
+[[br:28 Kerzu]]
+[[bs:28. decembar]]
+[[ca:28 de desembre]]
+[[cbk-zam:28 de Diciembre]]
+[[ceb:Disyembre 28]]
+[[co:28 di decembre]]
+[[cs:28. prosinec]]
+[[csb:28 gòdnika]]
+[[cv:Раштав, 28]]
+[[cy:28 Rhagfyr]]
+[[da:28. december]]
+[[de:28. Dezember]]
+[[el:28 Δεκεμβρίου]]
+[[en:December 28]]
+[[eo:28-a de decembro]]
+[[es:28 de diciembre]]
+[[et:28. detsember]]
+[[eu:Abenduaren 28]]
+[[fa:۲۸ دسامبر]]
+[[fi:28. joulukuuta]]
+[[fiu-vro:28. joulukuu päiv]]
+[[fo:28. desember]]
+[[fr:28 décembre]]
+[[frp:28 dècembro]]
+[[fur:28 di Dicembar]]
+[[fy:28 desimber]]
+[[ga:28 Nollaig]]
+[[gd:28 an Dùbhlachd]]
+[[gl:28 de decembro]]
+[[gv:28 Mee ny Nollick]]
+[[he:28 בדצמבר]]
+[[hi:28 दिसंबर]]
+[[hr:28. prosinca]]
+[[ht:28 desanm]]
+[[hu:December 28]]
+[[ia:28 de decembre]]
+[[id:28 Desember]]
+[[io:28 di decembro]]
+[[is:28. desember]]
+[[it:28 dicembre]]
+[[ja:12月28日]]
+[[jv:28 Desember]]
+[[ka:28 დეკემბერი]]
+[[kk:Желтоқсанның 28]]
+[[kn:ಡಿಸೆಂಬರ್ ೨೮]]
+[[ko:12월 28일]]
+[[ksh:28. Dezemmber]]
+[[ku:28'ê berfanbarê]]
+[[la:28 Decembris]]
+[[lb:28. Dezember]]
+[[lmo:28 12]]
+[[lt:Gruodžio 28]]
+[[mk:28 декември]]
+[[mr:डिसेंबर २८]]
+[[ms:28 Disember]]
+[[nap:28 'e dicembre]]
+[[nds-nl:28 december]]
+[[nl:28 december]]
+[[nn:28. desember]]
+[[no:28. desember]]
+[[nov:28 de desembre]]
+[[nrm:28 Dézembre]]
+[[oc:28 de decembre]]
+[[os:28 декабры]]
+[[pag:December 28]]
+[[pam:Disiembri 28]]
+[[pl:28 grudnia]]
+[[pt:28 de Dezembro]]
+[[ro:28 decembrie]]
+[[ru:28 декабря]]
+[[scn:28 di dicèmmiru]]
+[[sco:28 December]]
+[[se:Juovlamánu 28.]]
+[[sh:28.12.]]
+[[simple:December 28]]
+[[sk:28. december]]
+[[sl:28. december]]
+[[sq:28 Dhjetor]]
+[[sr:28. децембар]]
+[[su:28 Désémber]]
+[[sv:28 december]]
+[[sw:28 Desemba]]
+[[ta:டிசம்பர் 28]]
+[[te:డిసెంబర్ 28]]
+[[th:28 ธันวาคม]]
+[[tl:Disyembre 28]]
+[[tr:28 Aralık]]
+[[tt:28. Dekäber]]
+[[uk:28 грудня]]
+[[uz:28 dekabr]]
+[[vec:28 de diçenbre]]
+[[vi:28 tháng 12]]
+[[vo:Dekul 28]]
+[[wa:28 di decimbe]]
+[[war:Disyembre 28]]
+[[zh:12月28日]]
+[[zh-yue:12月28號]]
