--- a/29_oktober.mw
+++ b/29_oktober.mw
@@ -3,3 +3,114 @@
 *[[1507]] - [[Fernando Álvarez de Toledo]]
 
 [[Categorie: Datum]]
+
+[[af:29 Oktober]]
+[[an:29 d'otubre]]
+[[ar:29 أكتوبر]]
+[[ast:29 d'ochobre]]
+[[bat-smg:Spalė 29]]
+[[be:29 кастрычніка]]
+[[be-x-old:29 кастрычніка]]
+[[bg:29 октомври]]
+[[bn:অক্টোবর ২৯]]
+[[bpy:অক্টোবর ২৯]]
+[[br:29 Here]]
+[[bs:29. oktobar]]
+[[ca:29 d'octubre]]
+[[ceb:Oktubre 29]]
+[[co:29 uttrovi]]
+[[cs:29. říjen]]
+[[csb:29 rujana]]
+[[cv:Юпа, 29]]
+[[cy:29 Hydref]]
+[[da:29. oktober]]
+[[de:29. Oktober]]
+[[el:29 Οκτωβρίου]]
+[[en:October 29]]
+[[eo:29-a de oktobro]]
+[[es:29 de octubre]]
+[[et:29. oktoober]]
+[[eu:Urriaren 29]]
+[[fa:۲۹ اکتبر]]
+[[fi:29. lokakuuta]]
+[[fiu-vro:29. rehekuu päiv]]
+[[fo:29. oktober]]
+[[fr:29 octobre]]
+[[frp:29 octobro]]
+[[fur:29 di Otubar]]
+[[fy:29 oktober]]
+[[ga:29 Deireadh Fómhair]]
+[[gd:29 an Damhair]]
+[[gl:29 de outubro]]
+[[gv:29 Jerrey Fouyir]]
+[[he:29 באוקטובר]]
+[[hr:29. listopada]]
+[[ht:29 oktòb]]
+[[hu:Október 29]]
+[[ia:29 de octobre]]
+[[id:29 Oktober]]
+[[ig:October 29]]
+[[io:29 di oktobro]]
+[[is:29. október]]
+[[it:29 ottobre]]
+[[ja:10月29日]]
+[[jbo:29moi ci'urma'i bo djedi]]
+[[jv:29 Oktober]]
+[[ka:29 ოქტომბერი]]
+[[kk:Қазанның 29]]
+[[kn:ಅಕ್ಟೋಬರ್ ೨೯]]
+[[ko:10월 29일]]
+[[ksh:29. Oktoober]]
+[[ku:29'ê kewçêrê]]
+[[la:29 Octobris]]
+[[lb:29. Oktober]]
+[[lmo:29 10]]
+[[lt:Spalio 29]]
+[[mk:29 октомври]]
+[[ml:ഒക്ടോബര്‍ 29]]
+[[mr:ऑक्टोबर २९]]
+[[ms:29 Oktober]]
+[[nap:29 'e ottovre]]
+[[nds:29. Oktober]]
+[[nds-nl:29 oktober]]
+[[new:अक्टोबर २९]]
+[[nl:29 oktober]]
+[[nn:29. oktober]]
+[[no:29. oktober]]
+[[nov:29 de oktobre]]
+[[nrm:29 Octobre]]
+[[oc:29 d'octobre]]
+[[pag:October 29]]
+[[pam:Octubri 29]]
+[[pl:29 października]]
+[[pt:29 de Outubro]]
+[[ro:29 octombrie]]
+[[ru:29 октября]]
+[[scn:29 di uttùviru]]
+[[sco:29 October]]
+[[se:Golggotmánu 29.]]
+[[sh:29.10.]]
+[[simple:October 29]]
+[[sk:29. október]]
+[[sl:29. oktober]]
+[[sq:29 Tetor]]
+[[sr:29. октобар]]
+[[su:29 Oktober]]
+[[sv:29 oktober]]
+[[sw:29 Oktoba]]
+[[ta:அக்டோபர் 29]]
+[[te:అక్టోబర్ 29]]
+[[tg:29 октябр]]
+[[th:29 ตุลาคม]]
+[[tl:Oktubre 29]]
+[[tr:29 Ekim]]
+[[tt:29. Öktäber]]
+[[uk:29 жовтня]]
+[[uz:29 oktabr]]
+[[vec:29 de otobre]]
+[[vi:29 tháng 10]]
+[[vo:Tobul 29]]
+[[wa:29 d' octôbe]]
+[[war:Oktubre 29]]
+[[zh:10月29日]]
+[[zh-yue:10月29號]]
