--- a/29_september.mw
+++ b/29_september.mw
@@ -4,3 +4,112 @@
 *[[1980]] - [[Jan-Bart De Muelenaere]]
 
 [[Categorie: Datum]]
+
+[[af:29 September]]
+[[an:29 de setiembre]]
+[[ar:29 سبتمبر]]
+[[ast:29 de setiembre]]
+[[bat-smg:Siejės 29]]
+[[be:29 верасня]]
+[[be-x-old:29 верасьня]]
+[[bg:29 септември]]
+[[bn:সেপ্টেম্বর ২৯]]
+[[bpy:সেপ্টেম্বর ২৯]]
+[[br:29 Gwengolo]]
+[[bs:29. septembar]]
+[[ca:29 de setembre]]
+[[ceb:Septiyembre 29]]
+[[co:29 di settembre]]
+[[cs:29. září]]
+[[csb:29 séwnika]]
+[[cv:Авăн, 29]]
+[[cy:29 Medi]]
+[[da:29. september]]
+[[de:29. September]]
+[[el:29 Σεπτεμβρίου]]
+[[en:September 29]]
+[[eo:29-a de septembro]]
+[[es:29 de septiembre]]
+[[et:29. september]]
+[[eu:Irailaren 29]]
+[[fa:۲۹ سپتامبر]]
+[[fi:29. syyskuuta]]
+[[fiu-vro:29. süküskuu päiv]]
+[[fo:29. september]]
+[[fr:29 septembre]]
+[[frp:29 septembro]]
+[[fur:29 di Setembar]]
+[[fy:29 septimber]]
+[[ga:29 Meán Fómhair]]
+[[gd:29 an t-Sultain]]
+[[gl:29 de setembro]]
+[[gv:29 Mean Fouyir]]
+[[he:29 בספטמבר]]
+[[hr:29. rujna]]
+[[ht:29 septanm]]
+[[hu:Szeptember 29]]
+[[ia:29 de septembre]]
+[[id:29 September]]
+[[ig:September 29]]
+[[io:29 di septembro]]
+[[is:29. september]]
+[[it:29 settembre]]
+[[ja:9月29日]]
+[[jv:29 September]]
+[[ka:29 სექტემბერი]]
+[[kk:Қыркүйектің 29]]
+[[ko:9월 29일]]
+[[ksh:29. Sepptämmber]]
+[[ku:29'ê rezberê]]
+[[la:29 Septembris]]
+[[lb:29. September]]
+[[li:29 september]]
+[[lmo:29 09]]
+[[lt:Rugsėjo 29]]
+[[mk:29 септември]]
+[[ml:സെപ്റ്റംബര്‍ 29]]
+[[mr:सप्टेंबर २९]]
+[[ms:29 September]]
+[[nah:Tlachiucnāuhti 29]]
+[[nap:29 'e settembre]]
+[[nds:29. September]]
+[[nds-nl:29 september]]
+[[nl:29 september]]
+[[nn:29. september]]
+[[no:29. september]]
+[[nov:29 de septembre]]
+[[nrm:29 Septembre]]
+[[oc:29 de setembre]]
+[[pag:September 29]]
+[[pam:Septiembri 29]]
+[[pl:29 września]]
+[[pt:29 de Setembro]]
+[[ro:29 septembrie]]
+[[ru:29 сентября]]
+[[scn:29 di sittèmmiru]]
+[[sco:29 September]]
+[[se:Čakčamánu 29.]]
+[[sh:29.9.]]
+[[simple:September 29]]
+[[sk:29. september]]
+[[sl:29. september]]
+[[sq:29 Shtator]]
+[[sr:29. септембар]]
+[[su:29 Séptémber]]
+[[sv:29 september]]
+[[sw:29 Septemba]]
+[[ta:செப்டம்பர் 29]]
+[[te:సెప్టెంబర్ 29]]
+[[th:29 กันยายน]]
+[[tl:Setyembre 29]]
+[[tr:29 Eylül]]
+[[tt:29. Sentäber]]
+[[uk:29 вересня]]
+[[uz:29 sentabr]]
+[[vec:29 de setenbre]]
+[[vi:29 tháng 9]]
+[[vo:Setul 29]]
+[[wa:29 di setimbe]]
+[[war:Septyembre 29]]
+[[zh:9月29日]]
+[[zh-yue:9月29號]]
