*Empty MediaWiki Message*

--- a/Morda.mw
+++ b/Morda.mw
@@ -1,4 +1,4 @@
-Morda is e Brugsche hardcoregroep en binnen under "scene", de [[H8000]]-scene, zyn zieder sins enigste joaren toch wel e begrip binnen.  De band êet olliek ol enigste successen kunnen boekn in binnen- ên buutnland. Zo êet de groepe toch al meugen spêeln in ounder andere [[Duutsland]], [[Ôostnryk|Eustenryk]], [[Itoalië]], [[Japan]], [[Olland]], [[Pooln]] , [[Slovenieje]], [[Tsjechieje]].
+Morda is e Brugsche hardcoregroep en binnen under "scene", de [[H8000]]-scene, zyn zieder sins enigste joaren toch wel e begrip. De band êet olliek ol enigste successen kunnen boekn in binnen- ên buutnland. Zo êet de groepe toch al meugen spêeln in ounder andere [[Duutsland]], [[Ôostnryk|Eustenryk]], [[Itoalië]], [[Japan]], [[Olland]], [[Pooln]] , [[Slovenieje]], [[Tsjechieje]].
 Under geluud is e bitje e miengelieng van melodiëjen, metal, mosh en zuvere hardcore. Zieder zitten tegenweurdig by 't Eye Spy Records label.[[Ofbeeldienge:Morda.png|thumb|right|De gastn van Morda]]
 
 == Bezettienge ==
