--- a/2_april.mw
+++ b/2_april.mw
@@ -3,3 +3,122 @@
 *[[742]] - [[Karel den Grôotn]]
 
 [[Categorie: Datum]]
+
+[[af:2 April]]
+[[an:2 d'abril]]
+[[ar:2 أبريل]]
+[[ast:2 d'abril]]
+[[az:2 aprel]]
+[[bat-smg:Balondė 2]]
+[[be:2 красавіка]]
+[[be-x-old:2 красавіка]]
+[[bg:2 април]]
+[[bn:এপ্রিল ২]]
+[[bpy:এপ্রিল ২]]
+[[br:2 Ebrel]]
+[[bs:2. april]]
+[[ca:2 d'abril]]
+[[ceb:Abril 2]]
+[[co:2 d'aprile]]
+[[cs:2. duben]]
+[[csb:2 łżëkwiôta]]
+[[cv:Ака, 2]]
+[[cy:2 Ebrill]]
+[[da:2. april]]
+[[de:2. April]]
+[[el:2 Απριλίου]]
+[[en:April 2]]
+[[eo:2-a de aprilo]]
+[[es:2 de abril]]
+[[et:2. aprill]]
+[[eu:Apirilaren 2]]
+[[fa:۲ آوریل]]
+[[fi:2. huhtikuuta]]
+[[fiu-vro:2. mahlakuu päiv]]
+[[fo:2. apríl]]
+[[fr:2 avril]]
+[[frp:2 avril]]
+[[fur:2 di Avrîl]]
+[[fy:2 april]]
+[[ga:2 Aibreán]]
+[[gd:2 an Giblean]]
+[[gl:2 de abril]]
+[[gv:2 Averil]]
+[[he:2 באפריל]]
+[[hi:2 अप्रैल]]
+[[hr:2. travnja]]
+[[ht:2 avril]]
+[[hu:Április 2]]
+[[hy:Ապրիլի 2]]
+[[ia:2 de april]]
+[[id:2 April]]
+[[ie:2 april]]
+[[ig:April 2]]
+[[ilo:Abril 2]]
+[[io:2 di aprilo]]
+[[is:2. apríl]]
+[[it:2 aprile]]
+[[ja:4月2日]]
+[[jv:2 April]]
+[[ka:2 აპრილი]]
+[[kk:Сәуірдің 2]]
+[[kn:ಏಪ್ರಿಲ್ ೨]]
+[[ko:4월 2일]]
+[[ksh:2. Apprill]]
+[[ku:2'ê avrêlê]]
+[[la:2 Aprilis]]
+[[lb:2. Abrëll]]
+[[li:2 april]]
+[[lmo:02 04]]
+[[lt:Balandžio 2]]
+[[lv:2. aprīlis]]
+[[mk:2 април]]
+[[ml:ഏപ്രില്‍ 2]]
+[[mr:एप्रिल २]]
+[[ms:2 April]]
+[[nah:Tlanāuhti 2]]
+[[nap:2 'e abbrile]]
+[[nds:2. April]]
+[[nds-nl:2 april]]
+[[new:अप्रिल २]]
+[[nl:2 april]]
+[[nn:2. april]]
+[[no:2. april]]
+[[nov:2 de aprile]]
+[[nrm:2 Avri]]
+[[oc:2 d'abril]]
+[[os:2 апрелы]]
+[[pam:Abril 2]]
+[[pl:2 kwietnia]]
+[[pt:2 de Abril]]
+[[ro:2 aprilie]]
+[[ru:2 апреля]]
+[[scn:2 di aprili]]
+[[sco:2 Aprile]]
+[[se:Cuoŋománu 2.]]
+[[sh:2.4.]]
+[[simple:April 2]]
+[[sk:2. apríl]]
+[[sl:2. april]]
+[[sq:2 Prill]]
+[[sr:2. април]]
+[[su:2 April]]
+[[sv:2 april]]
+[[sw:2 Aprili]]
+[[ta:ஏப்ரல் 2]]
+[[te:ఏప్రిల్ 2]]
+[[tg:2 апрел]]
+[[th:2 เมษายน]]
+[[tl:Abril 2]]
+[[tr:2 Nisan]]
+[[tt:2. Äpril]]
+[[uk:2 квітня]]
+[[ur:2 اپریل]]
+[[uz:2 aprel]]
+[[vec:2 de apriłe]]
+[[vi:2 tháng 4]]
+[[vo:Prilul 2]]
+[[wa:2 d' avri]]
+[[war:Abril 2]]
+[[zh:4月2日]]
+[[zh-yue:4月2號]]
