--- a/2_juli.mw
+++ b/2_juli.mw
@@ -3,3 +3,115 @@
 *[[936]] - [[Hendrik I de Veugeloare]]
 
 [[Categorie: Datum]]
+
+[[af:2 Julie]]
+[[an:2 de chulio]]
+[[ar:2 يوليو]]
+[[ast:2 de xunetu]]
+[[bat-smg:Lėipas 2]]
+[[be:2 ліпеня]]
+[[be-x-old:2 ліпеня]]
+[[bg:2 юли]]
+[[bpy:জুলাই ২]]
+[[br:2 Gouere]]
+[[bs:2. juli]]
+[[ca:2 de juliol]]
+[[ceb:Hulyo 2]]
+[[co:2 di lugliu]]
+[[cs:2. červenec]]
+[[csb:2 lëpinca]]
+[[cv:Утă, 2]]
+[[cy:2 Gorffennaf]]
+[[da:2. juli]]
+[[de:2. Juli]]
+[[el:2 Ιουλίου]]
+[[en:July 2]]
+[[eo:2-a de julio]]
+[[es:2 de julio]]
+[[et:2. juuli]]
+[[eu:Uztailaren 2]]
+[[fa:۲ ژوئیه]]
+[[fi:2. heinäkuuta]]
+[[fiu-vro:2. hainakuu päiv]]
+[[fo:2. juli]]
+[[fr:2 juillet]]
+[[frp:2 j·ulyèt]]
+[[fur:2 di Lui]]
+[[fy:2 july]]
+[[ga:2 Iúil]]
+[[gd:2 an t-Iuchar]]
+[[gl:2 de xullo]]
+[[gv:2 Jerrey Souree]]
+[[he:2 ביולי]]
+[[hr:2. srpnja]]
+[[ht:2 jiyè]]
+[[hu:Július 2]]
+[[ia:2 de julio]]
+[[id:2 Juli]]
+[[ilo:Julio 2]]
+[[io:2 di julio]]
+[[is:2. júlí]]
+[[it:2 luglio]]
+[[ja:7月2日]]
+[[jbo:2moi mlajukma'i bo djedi]]
+[[jv:2 Juli]]
+[[ka:2 ივლისი]]
+[[kk:Шілденің 2]]
+[[kn:ಜುಲೈ ೨]]
+[[ko:7월 2일]]
+[[ksh:2. Juuli]]
+[[ku:2'ê tîrmehê]]
+[[la:2 Iulii]]
+[[lb:2. Juli]]
+[[li:2 juli]]
+[[lmo:02 07]]
+[[lt:Liepos 2]]
+[[lv:2. jūlijs]]
+[[mi:2 Hōngongoi]]
+[[mk:2 јули]]
+[[ml:ജൂലൈ 2]]
+[[mr:जुलै २]]
+[[ms:2 Julai]]
+[[nah:Tlachicōnti 2]]
+[[nap:2 'e luglio]]
+[[nds:2. Juli]]
+[[nds-nl:2 juli]]
+[[nl:2 juli]]
+[[nn:2. juli]]
+[[no:2. juli]]
+[[nov:2 de julie]]
+[[nrm:2 Juilet]]
+[[oc:2 de julhet]]
+[[pag:July 2]]
+[[pam:Juliu 2]]
+[[pl:2 lipca]]
+[[pt:2 de Julho]]
+[[ro:2 iulie]]
+[[ru:2 июля]]
+[[scn:2 di giugnettu]]
+[[sco:2 Julie]]
+[[se:Suoidnemánu 2.]]
+[[sh:2.7.]]
+[[simple:July 2]]
+[[sk:2. júl]]
+[[sl:2. julij]]
+[[sq:2 Korrik]]
+[[sr:2. јул]]
+[[su:2 Juli]]
+[[sv:2 juli]]
+[[sw:2 Julai]]
+[[ta:ஜூலை 2]]
+[[te:జూలై 2]]
+[[th:2 กรกฎาคม]]
+[[tl:Hulyo 2]]
+[[tr:2 Temmuz]]
+[[tt:2. Yül]]
+[[uk:2 липня]]
+[[uz:2 iyul]]
+[[vec:2 de lujo]]
+[[vi:2 tháng 7]]
+[[vo:Yulul 2]]
+[[wa:2 d' djulete]]
+[[war:Hulyo 2]]
+[[zh:7月2日]]
+[[zh-yue:7月2號]]
