--- a/7_april.mw
+++ b/7_april.mw
@@ -3,3 +3,117 @@
 *[[1629]] - [[Juan II van Oostnryk]]
 
 [[Categorie: Datum]]
+
+[[af:7 April]]
+[[an:7 d'abril]]
+[[ar:7 أبريل]]
+[[ast:7 d'abril]]
+[[bat-smg:Balondė 7]]
+[[be:7 красавіка]]
+[[be-x-old:7 красавіка]]
+[[bg:7 април]]
+[[bpy:এপ্রিল ৭]]
+[[br:7 Ebrel]]
+[[bs:7. april]]
+[[ca:7 d'abril]]
+[[ceb:Abril 7]]
+[[co:7 d'aprile]]
+[[cs:7. duben]]
+[[csb:7 łżëkwiôta]]
+[[cv:Ака, 7]]
+[[cy:7 Ebrill]]
+[[da:7. april]]
+[[de:7. April]]
+[[el:7 Απριλίου]]
+[[en:April 7]]
+[[eo:7-a de aprilo]]
+[[es:7 de abril]]
+[[et:7. aprill]]
+[[eu:Apirilaren 7]]
+[[fa:۷ آوریل]]
+[[fi:7. huhtikuuta]]
+[[fiu-vro:7. mahlakuu päiv]]
+[[fo:7. apríl]]
+[[fr:7 avril]]
+[[frp:7 avril]]
+[[fur:7 di Avrîl]]
+[[fy:7 april]]
+[[ga:7 Aibreán]]
+[[gd:7 an Giblean]]
+[[gl:7 de abril]]
+[[he:7 באפריל]]
+[[hr:7. travnja]]
+[[ht:7 avril]]
+[[hu:Április 7]]
+[[hy:Ապրիլի 7]]
+[[ia:7 de april]]
+[[id:7 April]]
+[[ie:7 april]]
+[[ig:April 7]]
+[[ilo:Abril 7]]
+[[io:7 di aprilo]]
+[[is:7. apríl]]
+[[it:7 aprile]]
+[[ja:4月7日]]
+[[jv:7 April]]
+[[ka:7 აპრილი]]
+[[kk:Сәуірдің 7]]
+[[ko:4월 7일]]
+[[ksh:7. Apprill]]
+[[ku:7'ê avrêlê]]
+[[la:7 Aprilis]]
+[[lb:7. Abrëll]]
+[[li:7 april]]
+[[lmo:07 04]]
+[[lt:Balandžio 7]]
+[[lv:7. aprīlis]]
+[[mk:7 април]]
+[[ml:ഏപ്രില്‍ 7]]
+[[mr:एप्रिल ७]]
+[[ms:7 April]]
+[[nah:Tlanāuhti 7]]
+[[nap:7 'e abbrile]]
+[[nds:7. April]]
+[[nds-nl:7 april]]
+[[new:अप्रिल ७]]
+[[nl:7 april]]
+[[nn:7. april]]
+[[no:7. april]]
+[[nov:7 de aprile]]
+[[nrm:7 Avri]]
+[[oc:7 d'abril]]
+[[os:7 апрелы]]
+[[pam:Abril 7]]
+[[pl:7 kwietnia]]
+[[pt:7 de Abril]]
+[[ro:7 aprilie]]
+[[ru:7 апреля]]
+[[scn:7 di aprili]]
+[[sco:7 Aprile]]
+[[se:Cuoŋománu 7.]]
+[[sh:7.4.]]
+[[simple:April 7]]
+[[sk:7. apríl]]
+[[sl:7. april]]
+[[sq:7 Prill]]
+[[sr:7. април]]
+[[su:7 April]]
+[[sv:7 april]]
+[[sw:7 Aprili]]
+[[ta:ஏப்ரல் 7]]
+[[te:ఏప్రిల్ 7]]
+[[tg:7 апрел]]
+[[th:7 เมษายน]]
+[[tl:Abril 7]]
+[[tr:7 Nisan]]
+[[tt:7. Äpril]]
+[[uk:7 квітня]]
+[[ur:7 اپریل]]
+[[uz:7 aprel]]
+[[vec:7 de apriłe]]
+[[vi:7 tháng 4]]
+[[vo:Prilul 7]]
+[[wa:7 d' avri]]
+[[war:Abril 7]]
+[[zh:4月7日]]
+[[zh-yue:4月7號]]
