--- a/26_meie.mw
+++ b/26_meie.mw
@@ -3,3 +3,119 @@
 *[[1922]] - [[André Poppe|Dré Poppe]]
 
 [[Categorie: Datum]]
+
+
+[[af:26 Mei]]
+[[an:26 de mayo]]
+[[ar:26 مايو]]
+[[ast:26 de mayu]]
+[[bat-smg:Gegožė 26]]
+[[be:26 мая]]
+[[be-x-old:26 траўня]]
+[[bg:26 май]]
+[[bn:মে ২৬]]
+[[bpy:মে ২৬]]
+[[br:26 Mae]]
+[[bs:26. maj]]
+[[ca:26 de maig]]
+[[ceb:Mayo 26]]
+[[co:26 di maghju]]
+[[cs:26. květen]]
+[[csb:26 môja]]
+[[cv:Çу, 26]]
+[[cy:26 Mai]]
+[[da:26. maj]]
+[[de:26. Mai]]
+[[el:26 Μαΐου]]
+[[en:May 26]]
+[[eo:26-a de majo]]
+[[es:26 de mayo]]
+[[et:26. mai]]
+[[eu:Maiatzaren 26]]
+[[fa:۲۶ مه]]
+[[fi:26. toukokuuta]]
+[[fiu-vro:26. lehekuu päiv]]
+[[fo:26. mai]]
+[[fr:26 mai]]
+[[frp:26 mê]]
+[[fur:26 di Mai]]
+[[fy:26 maaie]]
+[[ga:26 Bealtaine]]
+[[gd:26 an Cèitean]]
+[[gl:26 de maio]]
+[[gv:26 Boaldyn]]
+[[he:26 במאי]]
+[[hr:26. svibnja]]
+[[ht:26 me]]
+[[hu:Május 26]]
+[[ia:26 de maio]]
+[[id:26 Mei]]
+[[ie:26 may]]
+[[ig:May 26]]
+[[ilo:Mayo 26]]
+[[io:26 di mayo]]
+[[is:26. maí]]
+[[it:26 maggio]]
+[[ja:5月26日]]
+[[jv:26 Mei]]
+[[ka:26 მაისი]]
+[[kk:Мамырдың 26]]
+[[kn:ಮೇ ೨೬]]
+[[ko:5월 26일]]
+[[ksh:26. Meij]]
+[[ku:26'ê gulanê]]
+[[la:26 Maii]]
+[[lb:26. Mee]]
+[[li:26 mei]]
+[[lmo:26 05]]
+[[lt:Gegužės 26]]
+[[mk:26 мај]]
+[[ml:മേയ് 26]]
+[[mr:मे २६]]
+[[ms:26 Mei]]
+[[nah:Tlamācuīlti 26]]
+[[nap:26 'e maggio]]
+[[nds:26. Mai]]
+[[nds-nl:26 meie]]
+[[nl:26 mei]]
+[[nn:26. mai]]
+[[no:26. mai]]
+[[nov:26 de maye]]
+[[nrm:26 Mai]]
+[[oc:26 de mai]]
+[[os:26 майы]]
+[[pam:Mayu 26]]
+[[pl:26 maja]]
+[[pt:26 de Maio]]
+[[ro:26 mai]]
+[[ru:26 мая]]
+[[scn:26 di maiu]]
+[[sco:26 Mey]]
+[[se:Miessemánu 26.]]
+[[sh:26.5.]]
+[[simple:May 26]]
+[[sk:26. máj]]
+[[sl:26. maj]]
+[[sq:26 Maj]]
+[[sr:26. мај]]
+[[su:26 Méi]]
+[[sv:26 maj]]
+[[sw:26 Mei]]
+[[ta:மே 26]]
+[[te:మే 26]]
+[[tg:26 май]]
+[[th:26 พฤษภาคม]]
+[[tl:Mayo 26]]
+[[tr:26 Mayıs]]
+[[tt:26. May]]
+[[uk:26 травня]]
+[[ur:26 مئی]]
+[[uz:26 may]]
+[[vec:26 de majo]]
+[[vi:26 tháng 5]]
+[[vo:Mayul 26]]
+[[wa:26 di may]]
+[[war:Mayo 26]]
+[[yo:26 May]]
+[[zh:5月26日]]
+[[zh-yue:5月26號]]
