--- a/29_moarte.mw
+++ b/29_moarte.mw
@@ -4,3 +4,113 @@
 *[[1869]] - [[Sir Edwin Lutyens]]
 
 [[Categorie: Datum]]
+
+[[af:29 Maart]]
+[[an:29 de marzo]]
+[[ar:29 مارس]]
+[[ast:29 de marzu]]
+[[az:29 mart]]
+[[bat-smg:Kuova 29]]
+[[be:29 сакавіка]]
+[[be-x-old:29 сакавіка]]
+[[bg:29 март]]
+[[bpy:মার্চ ২৯]]
+[[br:29 Meurzh]]
+[[bs:29. mart]]
+[[ca:29 de març]]
+[[ceb:Marso 29]]
+[[co:29 di marzu]]
+[[cs:29. březen]]
+[[csb:29 strumiannika]]
+[[cv:Пуш, 29]]
+[[cy:29 Mawrth]]
+[[da:29. marts]]
+[[de:29. März]]
+[[el:29 Μαρτίου]]
+[[en:March 29]]
+[[eo:29-a de marto]]
+[[es:29 de marzo]]
+[[et:29. märts]]
+[[eu:Martxoaren 29]]
+[[fa:۲۹ مارس]]
+[[fi:29. maaliskuuta]]
+[[fiu-vro:29. urbõkuu päiv]]
+[[fo:29. mars]]
+[[fr:29 mars]]
+[[frp:29 mârs]]
+[[fur:29 di Març]]
+[[fy:29 maart]]
+[[ga:29 Márta]]
+[[gd:29 am Màrt]]
+[[gl:29 de marzo]]
+[[gv:29 Mart]]
+[[he:29 במרץ]]
+[[hr:29. ožujka]]
+[[ht:29 mas]]
+[[hu:Március 29]]
+[[ia:29 de martio]]
+[[id:29 Maret]]
+[[ig:March 29]]
+[[ilo:Marso 29]]
+[[io:29 di marto]]
+[[is:29. mars]]
+[[it:29 marzo]]
+[[ja:3月29日]]
+[[jv:29 Maret]]
+[[ka:29 მარტი]]
+[[kk:Наурыздың 29]]
+[[kn:ಮಾರ್ಚ್ ೨೯]]
+[[ko:3월 29일]]
+[[ksh:29. Määz]]
+[[ku:29'ê adarê]]
+[[la:29 Martii]]
+[[lb:29. Mäerz]]
+[[lmo:29 03]]
+[[lt:Kovo 29]]
+[[lv:29. marts]]
+[[mk:29 март]]
+[[ml:മാര്‍ച്ച് 29]]
+[[mr:मार्च २९]]
+[[ms:29 Mac]]
+[[nah:Tlayēti 29]]
+[[nap:29 'e màrzo]]
+[[nds:29. März]]
+[[nds-nl:29 meert]]
+[[nl:29 maart]]
+[[nn:29. mars]]
+[[no:29. mars]]
+[[nov:29 de marte]]
+[[nrm:29 Mar]]
+[[oc:29 de març]]
+[[pam:Marsu 29]]
+[[pl:29 marca]]
+[[pt:29 de Março]]
+[[ro:29 martie]]
+[[ru:29 марта]]
+[[scn:29 di marzu]]
+[[sco:29 Mairch]]
+[[se:Njukčamánu 29.]]
+[[sh:29.3.]]
+[[simple:March 29]]
+[[sk:29. marec]]
+[[sl:29. marec]]
+[[sq:29 Mars]]
+[[sr:29. март]]
+[[su:29 Maret]]
+[[sv:29 mars]]
+[[sw:29 Machi]]
+[[ta:மார்ச் 29]]
+[[te:మార్చి 29]]
+[[th:29 มีนาคม]]
+[[tl:Marso 29]]
+[[tr:29 Mart]]
+[[tt:29. Mart]]
+[[uk:29 березня]]
+[[uz:29 mart]]
+[[vec:29 de marzso]]
+[[vi:29 tháng 3]]
+[[vo:Mäzul 29]]
+[[wa:29 di måss]]
+[[war:Marso 29]]
+[[zh:3月29日]]
+[[zh-yue:3月29號]]
