--- a/5_moarte.mw
+++ b/5_moarte.mw
@@ -3,3 +3,117 @@
 *[[1576]] - [[Luis de Requesens y Zúñiga]]
 
 [[Categorie:Datum]]
+
+[[af:5 Maart]]
+[[an:5 de marzo]]
+[[ar:5 مارس]]
+[[ast:5 de marzu]]
+[[az:5 mart]]
+[[bat-smg:Kuova 5]]
+[[be:5 сакавіка]]
+[[be-x-old:5 сакавіка]]
+[[bg:5 март]]
+[[bn:মার্চ ৫]]
+[[bpy:মার্চ ৫]]
+[[br:5 Meurzh]]
+[[bs:5. mart]]
+[[ca:5 de març]]
+[[ceb:Marso 5]]
+[[co:5 di marzu]]
+[[cs:5. březen]]
+[[csb:5 strumiannika]]
+[[cv:Пуш, 5]]
+[[cy:5 Mawrth]]
+[[da:5. marts]]
+[[de:5. März]]
+[[el:5 Μαρτίου]]
+[[en:March 5]]
+[[eo:5-a de marto]]
+[[es:5 de marzo]]
+[[et:5. märts]]
+[[eu:Martxoaren 5]]
+[[fa:۵ مارس]]
+[[fi:5. maaliskuuta]]
+[[fiu-vro:5. urbõkuu päiv]]
+[[fo:5. mars]]
+[[fr:5 mars]]
+[[frp:5 mârs]]
+[[fur:5 di Març]]
+[[fy:5 maart]]
+[[ga:5 Márta]]
+[[gd:5 am Màrt]]
+[[gl:5 de marzo]]
+[[gv:5 Mart]]
+[[he:5 במרץ]]
+[[hr:5. ožujka]]
+[[ht:5 mas]]
+[[hu:Március 5]]
+[[hy:Մարտի 5]]
+[[ia:5 de martio]]
+[[id:5 Maret]]
+[[ie:5 marte]]
+[[ig:March 5]]
+[[ilo:Marso 5]]
+[[io:5 di marto]]
+[[is:5. mars]]
+[[it:5 marzo]]
+[[ja:3月5日]]
+[[jv:5 Maret]]
+[[ka:5 მარტი]]
+[[kk:Наурыздың 5]]
+[[ko:3월 5일]]
+[[ksh:5. Määz]]
+[[ku:5'ê adarê]]
+[[la:5 Martii]]
+[[lb:5. Mäerz]]
+[[lbe:5 март]]
+[[lmo:05 03]]
+[[lt:Kovo 5]]
+[[lv:5. marts]]
+[[mk:5 март]]
+[[ml:മാര്‍ച്ച് 5]]
+[[mr:मार्च ५]]
+[[ms:5 Mac]]
+[[nah:Tlayēti 5]]
+[[nap:5 'e màrzo]]
+[[nds:5. März]]
+[[nds-nl:5 meert]]
+[[nl:5 maart]]
+[[nn:5. mars]]
+[[no:5. mars]]
+[[nov:5 de marte]]
+[[nrm:5 Mar]]
+[[oc:5 de març]]
+[[os:5 мартъийы]]
+[[pam:Marsu 5]]
+[[pl:5 marca]]
+[[pt:5 de Março]]
+[[ro:5 martie]]
+[[ru:5 марта]]
+[[scn:5 di marzu]]
+[[sco:5 Mairch]]
+[[se:Njukčamánu 5.]]
+[[sh:5.3.]]
+[[simple:March 5]]
+[[sk:5. marec]]
+[[sl:5. marec]]
+[[sq:5 Mars]]
+[[sr:5. март]]
+[[su:5 Maret]]
+[[sv:5 mars]]
+[[sw:5 Machi]]
+[[ta:மார்ச் 5]]
+[[te:మార్చి 5]]
+[[th:5 มีนาคม]]
+[[tl:Marso 5]]
+[[tr:5 Mart]]
+[[tt:5. Mart]]
+[[uk:5 березня]]
+[[uz:5 mart]]
+[[vec:5 de marzso]]
+[[vi:5 tháng 3]]
+[[vo:Mäzul 5]]
+[[wa:5 di måss]]
+[[war:Marso 5]]
+[[zh:3月5日]]
+[[zh-yue:3月5號]]
