--- a/465.mw
+++ b/465.mw
@@ -2,3 +2,80 @@
 *[[Clovis I]]
 
 [[Categorie: 5e eeuw]]
+
+[[af:465]]
+[[am:465 እ.ኤ.አ.]]
+[[an:465]]
+[[ar:465]]
+[[ast:465]]
+[[az:465]]
+[[be:465]]
+[[bg:465]]
+[[bh:४६५]]
+[[bn:৪৬৫]]
+[[bpy:মারি ৪৬৫]]
+[[bs:465]]
+[[ca:465]]
+[[co:465]]
+[[cs:465]]
+[[cv:465]]
+[[cy:465]]
+[[da:465]]
+[[de:465]]
+[[el:465]]
+[[en:465]]
+[[eo:465]]
+[[es:465]]
+[[eu:465]]
+[[fi:465]]
+[[fr:465]]
+[[fy:465]]
+[[gl:465]]
+[[he:465]]
+[[hi:465]]
+[[hr:465.]]
+[[ht:465 (almanak jilyen)]]
+[[hu:465]]
+[[id:465]]
+[[io:465]]
+[[it:465]]
+[[ja:465年]]
+[[jv:465]]
+[[ka:465]]
+[[ko:465년]]
+[[ksh:Joohr 465]]
+[[la:465]]
+[[lb:465]]
+[[lmo:465]]
+[[map-bms:465]]
+[[mr:इ.स. ४६५]]
+[[ms:465]]
+[[nah:465]]
+[[nap:465]]
+[[new:४६५]]
+[[nl:465]]
+[[nn:465]]
+[[no:465]]
+[[oc:465]]
+[[or:୪୬୫]]
+[[pi:४६५]]
+[[pl:465]]
+[[pt:465]]
+[[ro:465]]
+[[ru:465 год]]
+[[sa:४६५]]
+[[scn:465]]
+[[sk:465]]
+[[sl:465]]
+[[sq:465]]
+[[sr:465]]
+[[su:465]]
+[[sv:465]]
+[[sw:465]]
+[[th:พ.ศ. 1008]]
+[[tr:465]]
+[[tt:465]]
+[[uk:465]]
+[[uz:465]]
+[[vec:465]]
+[[zh:465年]]
