--- a/511.mw
+++ b/511.mw
@@ -2,3 +2,79 @@
 *[[Clovis I]]
 
 [[Categorie: 6e eeuw]]
+
+[[af:511]]
+[[am:511 እ.ኤ.አ.]]
+[[an:511]]
+[[ar:511]]
+[[ast:511]]
+[[az:511]]
+[[be:511]]
+[[bg:511]]
+[[bh:५११]]
+[[bn:৫১১]]
+[[bpy:মারি ৫১১]]
+[[bs:511]]
+[[ca:511]]
+[[co:511]]
+[[cs:511]]
+[[csb:511]]
+[[cv:511]]
+[[cy:511]]
+[[da:511]]
+[[de:511]]
+[[el:511]]
+[[en:511]]
+[[eo:511]]
+[[es:511]]
+[[eu:511]]
+[[fi:511]]
+[[fr:511]]
+[[fy:511]]
+[[gd:511]]
+[[gl:511]]
+[[he:511]]
+[[hi:511]]
+[[hr:511.]]
+[[ht:511 (almanak jilyen)]]
+[[hu:511]]
+[[id:511]]
+[[io:511]]
+[[it:511]]
+[[ja:511年]]
+[[jv:511]]
+[[ka:511]]
+[[ko:511년]]
+[[ksh:Joohr 511]]
+[[la:511]]
+[[lb:511]]
+[[map-bms:511]]
+[[mr:इ.स. ५११]]
+[[ms:511]]
+[[nah:511]]
+[[nap:511]]
+[[new:५११]]
+[[nl:511]]
+[[nn:511]]
+[[no:511]]
+[[oc:511]]
+[[pi:५११]]
+[[pl:511]]
+[[pt:511]]
+[[ro:511]]
+[[ru:511 год]]
+[[sa:५११]]
+[[sk:511]]
+[[sl:511]]
+[[sq:511]]
+[[sr:511]]
+[[su:511]]
+[[sv:511]]
+[[sw:511]]
+[[th:พ.ศ. 1054]]
+[[tr:511]]
+[[tt:511]]
+[[uk:511]]
+[[uz:511]]
+[[vec:511]]
+[[zh:511年]]
