--- a/742.mw
+++ b/742.mw
@@ -3,3 +3,86 @@
 *[[2 april|2]] - [[Karel den Grôotn]]
 
 [[Categorie:8e eeuw]]
+
+[[af:742]]
+[[als:740er#742]]
+[[am:742 እ.ኤ.አ.]]
+[[an:742]]
+[[ar:742]]
+[[ast:742]]
+[[az:742]]
+[[be:742]]
+[[bg:742]]
+[[bh:७४२]]
+[[bn:৭৪২]]
+[[bpy:মারি ৭৪২]]
+[[br:742]]
+[[bs:742]]
+[[ca:742]]
+[[co:742]]
+[[cs:742]]
+[[cv:742]]
+[[cy:742]]
+[[da:742]]
+[[de:742]]
+[[el:742]]
+[[en:742]]
+[[eo:742]]
+[[es:742]]
+[[et:742]]
+[[eu:742]]
+[[fi:742]]
+[[fr:742]]
+[[fy:742]]
+[[gd:742]]
+[[gl:742]]
+[[he:742]]
+[[hi:742]]
+[[hr:742.]]
+[[ht:742 (almanak jilyen)]]
+[[hu:742]]
+[[id:742]]
+[[io:742]]
+[[is:742]]
+[[it:742]]
+[[ja:742年]]
+[[jv:742]]
+[[ka:742]]
+[[ko:742년]]
+[[ksh:Joohr 742]]
+[[la:742]]
+[[lb:742]]
+[[lmo:742]]
+[[map-bms:742]]
+[[mk:742]]
+[[mr:इ.स. ७४२]]
+[[ms:742]]
+[[nah:742]]
+[[nap:742]]
+[[new:७४२]]
+[[nl:742]]
+[[nn:742]]
+[[no:742]]
+[[oc:742]]
+[[pi:७४२]]
+[[pl:742]]
+[[pt:742]]
+[[ro:742]]
+[[ru:742 год]]
+[[sa:७४२]]
+[[scn:742]]
+[[sk:742]]
+[[sl:742]]
+[[sq:742]]
+[[sr:742]]
+[[su:742]]
+[[sv:742]]
+[[sw:742]]
+[[th:พ.ศ. 1285]]
+[[tr:742]]
+[[tt:742]]
+[[uk:742]]
+[[uz:742]]
+[[vec:742]]
+[[zh:742年]]
+[[zh-yue:742年]]
