--- a/814.mw
+++ b/814.mw
@@ -3,3 +3,85 @@
 *[[28 januoari|28]] - [[Karel den Grôotn]]
 
 [[Categorie: 9e eeuw]]
+
+[[af:814]]
+[[am:814 እ.ኤ.አ.]]
+[[an:814]]
+[[ar:814]]
+[[ast:814]]
+[[az:814]]
+[[be:814]]
+[[bg:814]]
+[[bh:८१४]]
+[[bn:৮১৪]]
+[[bpy:মারি ৮১৪]]
+[[br:814]]
+[[bs:814]]
+[[ca:814]]
+[[co:814]]
+[[cs:814]]
+[[csb:814]]
+[[cv:814]]
+[[cy:814]]
+[[da:814]]
+[[de:814]]
+[[el:814]]
+[[en:814]]
+[[eo:814]]
+[[es:814]]
+[[et:814]]
+[[eu:814]]
+[[fi:814]]
+[[fr:814]]
+[[gl:814]]
+[[he:814]]
+[[hi:814]]
+[[hr:814.]]
+[[ht:814 (almanak jilyen)]]
+[[hu:814]]
+[[id:814]]
+[[io:814]]
+[[is:814]]
+[[it:814]]
+[[ja:814年]]
+[[jv:814]]
+[[ka:814]]
+[[ko:814년]]
+[[ksh:Joohr 814]]
+[[la:814]]
+[[lb:814]]
+[[lmo:814]]
+[[map-bms:814]]
+[[mk:814]]
+[[mr:इ.स. ८१४]]
+[[ms:814]]
+[[nah:814]]
+[[nap:814]]
+[[nds:814]]
+[[new:८१४]]
+[[nl:814]]
+[[nn:814]]
+[[no:814]]
+[[oc:814]]
+[[pi:८१४]]
+[[pl:814]]
+[[pt:814]]
+[[ro:814]]
+[[ru:814 год]]
+[[sa:८१४]]
+[[scn:814]]
+[[simple:814]]
+[[sk:814]]
+[[sl:814]]
+[[sq:814]]
+[[sr:814]]
+[[su:814]]
+[[sv:814]]
+[[sw:814]]
+[[th:พ.ศ. 1357]]
+[[tr:814]]
+[[tt:814]]
+[[uk:814]]
+[[uz:814]]
+[[vec:814]]
+[[zh:814年]]
