--- a/823.mw
+++ b/823.mw
@@ -3,3 +3,83 @@
 *[[13 juni|13]] - [[Karel den Kletsn]]
 
 [[Categorie: 9e eeuw]]
+
+[[af:823]]
+[[am:823 እ.ኤ.አ.]]
+[[an:823]]
+[[ar:823]]
+[[ast:823]]
+[[az:823]]
+[[be:823]]
+[[bg:823]]
+[[bh:८२३]]
+[[bn:৮২৩]]
+[[bpy:মারি ৮২৩]]
+[[br:823]]
+[[bs:823]]
+[[ca:823]]
+[[co:823]]
+[[cs:823]]
+[[csb:823]]
+[[cv:823]]
+[[cy:823]]
+[[da:823]]
+[[de:823]]
+[[el:823]]
+[[en:823]]
+[[eo:823]]
+[[es:823]]
+[[et:823]]
+[[eu:823]]
+[[fi:823]]
+[[fr:823]]
+[[gl:823]]
+[[he:823]]
+[[hi:823]]
+[[hr:823.]]
+[[ht:823 (almanak jilyen)]]
+[[hu:823]]
+[[id:823]]
+[[io:823]]
+[[it:823]]
+[[ja:823年]]
+[[jv:823]]
+[[ka:823]]
+[[ko:823년]]
+[[ksh:Joohr 823]]
+[[la:823]]
+[[lb:823]]
+[[lmo:823]]
+[[map-bms:823]]
+[[mk:823]]
+[[mr:इ.स. ८२३]]
+[[ms:823]]
+[[nah:823]]
+[[nap:823]]
+[[nds:823]]
+[[new:८२३]]
+[[nl:823]]
+[[nn:823]]
+[[no:823]]
+[[oc:823]]
+[[pi:८२३]]
+[[pl:823]]
+[[pt:823]]
+[[ro:823]]
+[[ru:823 год]]
+[[sa:८२३]]
+[[scn:823]]
+[[sk:823]]
+[[sl:823]]
+[[sq:823]]
+[[sr:823]]
+[[su:823]]
+[[sv:823]]
+[[sw:823]]
+[[th:พ.ศ. 1366]]
+[[tr:823]]
+[[tt:823]]
+[[uk:823]]
+[[uz:823]]
+[[vec:823]]
+[[zh:823年]]
