--- a/876.mw
+++ b/876.mw
@@ -2,3 +2,85 @@
 *[[Hendrik I de Veugeloare]]
 
 [[Categorie: 9e eeuw]]
+
+[[af:876]]
+[[am:876 እ.ኤ.አ.]]
+[[an:876]]
+[[ar:876]]
+[[ast:876]]
+[[az:876]]
+[[be:876]]
+[[bg:876]]
+[[bh:८७६]]
+[[bn:৮৭৬]]
+[[bpy:মারি ৮৭৬]]
+[[br:876]]
+[[bs:876]]
+[[ca:876]]
+[[co:876]]
+[[cs:876]]
+[[csb:876]]
+[[cv:876]]
+[[cy:876]]
+[[da:876]]
+[[de:876]]
+[[el:876]]
+[[en:876]]
+[[eo:876]]
+[[es:876]]
+[[et:876]]
+[[eu:876]]
+[[fi:876]]
+[[fr:876]]
+[[fy:876]]
+[[gl:876]]
+[[he:876]]
+[[hi:876]]
+[[hr:876.]]
+[[ht:876 (almanak jilyen)]]
+[[hu:876]]
+[[id:876]]
+[[io:876]]
+[[it:876]]
+[[ja:876年]]
+[[jv:876]]
+[[ka:876]]
+[[ko:876년]]
+[[ksh:Joohr 876]]
+[[la:876]]
+[[lb:876]]
+[[lmo:876]]
+[[map-bms:876]]
+[[mk:876]]
+[[mr:इ.स. ८७६]]
+[[ms:876]]
+[[nah:876]]
+[[nap:876]]
+[[new:८७६]]
+[[nl:876]]
+[[nn:876]]
+[[no:876]]
+[[nrm:876]]
+[[oc:876]]
+[[pi:८७६]]
+[[pl:876]]
+[[pt:876]]
+[[ro:876]]
+[[ru:876 год]]
+[[sa:८७६]]
+[[scn:876]]
+[[sk:876]]
+[[sl:876]]
+[[sq:876]]
+[[sr:876]]
+[[su:876]]
+[[sv:876]]
+[[sw:876]]
+[[th:พ.ศ. 1419]]
+[[tr:876]]
+[[tt:876]]
+[[uk:876]]
+[[uz:876]]
+[[vec:876]]
+[[zh:876年]]
+[[zh-yue:876年]]
