--- a/877.mw
+++ b/877.mw
@@ -3,3 +3,85 @@
 *[[6 oktober|6]] - [[Karel den Kletsn]]
 
 [[Categorie: 9e eeuw]]
+
+[[af:877]]
+[[am:877 እ.ኤ.አ.]]
+[[an:877]]
+[[ar:877]]
+[[ast:877]]
+[[az:877]]
+[[be:877]]
+[[bg:877]]
+[[bh:८७७]]
+[[bn:৮৭৭]]
+[[bpy:মারি ৮৭৭]]
+[[br:877]]
+[[bs:877]]
+[[ca:877]]
+[[co:877]]
+[[cs:877]]
+[[csb:877]]
+[[cv:877]]
+[[cy:877]]
+[[da:877]]
+[[de:877]]
+[[el:877]]
+[[en:877]]
+[[eo:877]]
+[[es:877]]
+[[et:877]]
+[[eu:877]]
+[[fi:877]]
+[[fr:877]]
+[[gl:877]]
+[[he:877]]
+[[hi:877]]
+[[hr:877.]]
+[[ht:877 (almanak jilyen)]]
+[[hu:877]]
+[[id:877]]
+[[io:877]]
+[[it:877]]
+[[ja:877年]]
+[[jv:877]]
+[[ka:877]]
+[[ko:877년]]
+[[ksh:Joohr 877]]
+[[la:877]]
+[[lb:877]]
+[[lmo:877]]
+[[map-bms:877]]
+[[mk:877]]
+[[mr:इ.स. ८७७]]
+[[ms:877]]
+[[nah:877]]
+[[nap:877]]
+[[nds:877]]
+[[new:८७७]]
+[[nl:877]]
+[[nn:877]]
+[[no:877]]
+[[nrm:877]]
+[[oc:877]]
+[[pi:८७७]]
+[[pl:877]]
+[[pt:877]]
+[[ro:877]]
+[[ru:877 год]]
+[[sa:८७७]]
+[[scn:877]]
+[[sk:877]]
+[[sl:877]]
+[[sq:877]]
+[[sr:877]]
+[[su:877]]
+[[sv:877]]
+[[sw:877]]
+[[th:พ.ศ. 1420]]
+[[tr:877]]
+[[tt:877]]
+[[uk:877]]
+[[uz:877]]
+[[vec:877]]
+[[zh:877年]]
+[[zh-yue:877年]]
