--- a/936.mw
+++ b/936.mw
@@ -3,3 +3,87 @@
 *[[2 juli|2]] - [[Hendrik I de Veugeloare]]
 
 [[Categorie: 10e eeuw]]
+
+[[af:936]]
+[[am:936 እ.ኤ.አ.]]
+[[an:936]]
+[[ar:936]]
+[[ast:936]]
+[[az:936]]
+[[be:936]]
+[[be-x-old:936]]
+[[bg:936]]
+[[bh:९३६]]
+[[bn:৯৩৬]]
+[[bpy:মারি ৯৩৬]]
+[[br:936]]
+[[bs:936]]
+[[ca:936]]
+[[co:936]]
+[[cs:936]]
+[[csb:936]]
+[[cv:936]]
+[[cy:936]]
+[[da:936]]
+[[de:936]]
+[[el:936]]
+[[en:936]]
+[[eo:936]]
+[[es:936]]
+[[et:936]]
+[[eu:936]]
+[[fi:936]]
+[[fr:936]]
+[[gd:936]]
+[[gl:936]]
+[[he:936]]
+[[hi:936]]
+[[hr:936.]]
+[[ht:936 (almanak jilyen)]]
+[[hu:936]]
+[[id:936]]
+[[io:936]]
+[[it:936]]
+[[ja:936年]]
+[[jv:936]]
+[[ka:936]]
+[[ko:936년]]
+[[ksh:Joohr 936]]
+[[la:936]]
+[[lb:936]]
+[[lmo:936]]
+[[map-bms:936]]
+[[mi:936]]
+[[mk:936]]
+[[mr:इ.स. ९३६]]
+[[ms:936]]
+[[nah:936]]
+[[nap:936]]
+[[new:९३६]]
+[[nl:936]]
+[[nn:936]]
+[[no:936]]
+[[nrm:936]]
+[[oc:936]]
+[[pi:९३६]]
+[[pl:936]]
+[[pt:936]]
+[[ro:936]]
+[[ru:936 год]]
+[[sa:९३६]]
+[[scn:936]]
+[[sk:936]]
+[[sl:936]]
+[[sq:936]]
+[[sr:936]]
+[[su:936]]
+[[sv:936]]
+[[sw:936]]
+[[th:พ.ศ. 1479]]
+[[tr:936]]
+[[tt:936]]
+[[uk:936]]
+[[uz:936]]
+[[vec:936]]
+[[zh:936年]]
+[[zh-yue:936年]]
