--- a/1330.mw
+++ b/1330.mw
@@ -3,3 +3,92 @@
 *[[29 november|29]] - [[Lodewyk van Male]]
 
 [[Categorie: 1330-1339]]
+
+[[af:1330]]
+[[am:1330 እ.ኤ.አ.]]
+[[an:1330]]
+[[ar:1330]]
+[[ast:1330]]
+[[az:1330]]
+[[be:1330]]
+[[be-x-old:1330]]
+[[bg:1330]]
+[[bh:१३३०]]
+[[bn:১৩৩০]]
+[[bpy:মারি ১৩৩০]]
+[[br:1330]]
+[[bs:1330]]
+[[ca:1330]]
+[[co:1330]]
+[[cs:1330]]
+[[cv:1330]]
+[[cy:1330]]
+[[da:1330]]
+[[de:1330]]
+[[el:1330]]
+[[en:1330]]
+[[eo:1330]]
+[[es:1330]]
+[[et:1330]]
+[[eu:1330]]
+[[fi:1330]]
+[[fr:1330]]
+[[fy:1330]]
+[[ga:1330]]
+[[gd:1330]]
+[[gl:1330]]
+[[he:1330]]
+[[hi:1330]]
+[[hr:1330.]]
+[[ht:1330 (almanak jilyen)]]
+[[hu:1330]]
+[[hy:1330]]
+[[id:1330]]
+[[io:1330]]
+[[is:1330]]
+[[it:1330]]
+[[ja:1330年]]
+[[jv:1330]]
+[[ka:1330]]
+[[ko:1330년]]
+[[ksh:Joohr 1330]]
+[[la:1330]]
+[[lb:1330]]
+[[lt:XIV amžiaus 3-as dešimtmetis#1330]]
+[[map-bms:1330]]
+[[mi:1330]]
+[[mk:1330]]
+[[mr:इ.स. १३३०]]
+[[ms:1330]]
+[[nah:1330]]
+[[nap:1330]]
+[[nds:1330]]
+[[new:१३३०]]
+[[nl:1330]]
+[[nn:1330]]
+[[no:1330]]
+[[nrm:1330]]
+[[oc:1330]]
+[[os:1330]]
+[[pi:१३३०]]
+[[pl:1330]]
+[[pt:1330]]
+[[ro:1330]]
+[[ru:1330 год]]
+[[sa:१३३०]]
+[[scn:1330]]
+[[sk:1330]]
+[[sl:1330]]
+[[sq:1330]]
+[[sr:1330]]
+[[su:1330]]
+[[sv:1330]]
+[[sw:1330]]
+[[th:พ.ศ. 1873]]
+[[tl:1330]]
+[[tr:1330]]
+[[uk:1330]]
+[[uz:1330]]
+[[vec:1330]]
+[[zh:1330年]]
+[[zh-yue:1330年]]
