--- a/1350.mw
+++ b/1350.mw
@@ -3,3 +3,92 @@
 *[[13 april|13]] - [[Margaretha van Male]]
 
 [[Categorie: 1350-1359]]
+
+[[af:1350]]
+[[am:1350 እ.ኤ.አ.]]
+[[an:1350]]
+[[ar:1350]]
+[[ast:1350]]
+[[az:1350]]
+[[be:1350]]
+[[be-x-old:1350]]
+[[bg:1350]]
+[[bh:१३५०]]
+[[bn:১৩৫০]]
+[[bpy:মারি ১৩৫০]]
+[[br:1350]]
+[[bs:1350]]
+[[ca:1350]]
+[[co:1350]]
+[[cs:1350]]
+[[cv:1350]]
+[[cy:1350]]
+[[da:1350]]
+[[de:1350]]
+[[el:1350]]
+[[en:1350]]
+[[eo:1350]]
+[[es:1350]]
+[[et:1350]]
+[[eu:1350]]
+[[fi:1350]]
+[[fr:1350]]
+[[fy:1350]]
+[[gd:1350]]
+[[gl:1350]]
+[[he:1350]]
+[[hi:1350]]
+[[hr:1350.]]
+[[ht:1350 (almanak jilyen)]]
+[[hu:1350]]
+[[hy:1350]]
+[[id:1350]]
+[[io:1350]]
+[[is:1350]]
+[[it:1350]]
+[[ja:1350年]]
+[[jv:1350]]
+[[ka:1350]]
+[[ko:1350년]]
+[[ksh:Joohr 1350]]
+[[la:1350]]
+[[lb:1350]]
+[[lt:XIV amžiaus 5-as dešimtmetis#1350]]
+[[map-bms:1350]]
+[[mi:1350]]
+[[mk:1350]]
+[[mr:इ.स. १३५०]]
+[[ms:1350]]
+[[nah:1350]]
+[[nap:1350]]
+[[new:१३५०]]
+[[nl:1350]]
+[[nn:1350]]
+[[no:1350]]
+[[nrm:1350]]
+[[oc:1350]]
+[[os:1350]]
+[[pi:१३५०]]
+[[pl:1350]]
+[[pt:1350]]
+[[ro:1350]]
+[[ru:1350 год]]
+[[sa:१३५०]]
+[[scn:1350]]
+[[simple:1350]]
+[[sk:1350]]
+[[sl:1350]]
+[[sq:1350]]
+[[sr:1350]]
+[[su:1350]]
+[[sv:1350]]
+[[sw:1350]]
+[[th:พ.ศ. 1893]]
+[[tl:1350]]
+[[tr:1350]]
+[[tt:1350]]
+[[uk:1350]]
+[[uz:1350]]
+[[vec:1350]]
+[[zh:1350年]]
+[[zh-yue:1350年]]
