--- a/1384.mw
+++ b/1384.mw
@@ -3,3 +3,92 @@
 *[[30 januoari|30]] - [[Lodewyk van Male]]
 
 [[Categorie: 1380-1389]]
+
+[[af:1384]]
+[[am:1384 እ.ኤ.አ.]]
+[[an:1384]]
+[[ar:1384]]
+[[ast:1384]]
+[[az:1384]]
+[[be:1384]]
+[[be-x-old:1384]]
+[[bg:1384]]
+[[bh:१३८४]]
+[[bn:১৩৮৪]]
+[[bpy:মারি ১৩৮৪]]
+[[br:1384]]
+[[bs:1384]]
+[[ca:1384]]
+[[co:1384]]
+[[cs:1384]]
+[[csb:1384]]
+[[cv:1384]]
+[[cy:1384]]
+[[da:1384]]
+[[de:1384]]
+[[el:1384]]
+[[en:1384]]
+[[eo:1384]]
+[[es:1384]]
+[[et:1384]]
+[[eu:1384]]
+[[fi:1384]]
+[[fr:1384]]
+[[fy:1384]]
+[[gd:1384]]
+[[gl:1384]]
+[[he:1384]]
+[[hi:1384]]
+[[hr:1384.]]
+[[ht:1384 (almanak jilyen)]]
+[[hu:1384]]
+[[hy:1384]]
+[[id:1384]]
+[[io:1384]]
+[[is:1384]]
+[[it:1384]]
+[[ja:1384年]]
+[[jv:1384]]
+[[ka:1384]]
+[[ko:1384년]]
+[[ksh:Joohr 1384]]
+[[la:1384]]
+[[lb:1384]]
+[[lt:XIV amžiaus 9-as dešimtmetis#1384]]
+[[map-bms:1384]]
+[[mi:1384]]
+[[mk:1384]]
+[[mr:इ.स. १३८४]]
+[[ms:1384]]
+[[nah:1384]]
+[[nap:1384]]
+[[nds-nl:1384]]
+[[new:१३८४]]
+[[nl:1384]]
+[[nn:1384]]
+[[no:1384]]
+[[nrm:1384]]
+[[oc:1384]]
+[[os:1384]]
+[[pi:१३८४]]
+[[pl:1384]]
+[[pt:1384]]
+[[ro:1384]]
+[[ru:1384 год]]
+[[sa:१३८४]]
+[[scn:1384]]
+[[sk:1384]]
+[[sl:1384]]
+[[sq:1384]]
+[[sr:1384]]
+[[su:1384]]
+[[sv:1384]]
+[[sw:1384]]
+[[th:พ.ศ. 1927]]
+[[tl:1384]]
+[[tr:1384]]
+[[uk:1384]]
+[[uz:1384]]
+[[vec:1384]]
+[[zh:1384年]]
+[[zh-yue:1384年]]
