--- a/1405.mw
+++ b/1405.mw
@@ -3,3 +3,96 @@
 *[[Margaretha van Male]]
 
 [[Categorie: 1400-1409]]
+
+[[af:1405]]
+[[am:1405 እ.ኤ.አ.]]
+[[an:1405]]
+[[ar:1405]]
+[[ast:1405]]
+[[az:1405]]
+[[be:1405]]
+[[be-x-old:1405]]
+[[bg:1405]]
+[[bh:१४०५]]
+[[bn:১৪০৫]]
+[[bpy:মারি ১৪০৫]]
+[[br:1405]]
+[[bs:1405]]
+[[ca:1405]]
+[[co:1405]]
+[[cs:1405]]
+[[csb:1405]]
+[[cv:1405]]
+[[cy:1405]]
+[[da:1405]]
+[[de:1405]]
+[[el:1405]]
+[[en:1405]]
+[[eo:1405]]
+[[es:1405]]
+[[et:1405]]
+[[eu:1405]]
+[[fi:1405]]
+[[fr:1405]]
+[[fy:1405]]
+[[gd:1405]]
+[[gl:1405]]
+[[he:1405]]
+[[hi:1405]]
+[[hr:1405.]]
+[[ht:1405 (almanak jilyen)]]
+[[hu:1405]]
+[[hy:1405]]
+[[ia:1405]]
+[[id:1405]]
+[[io:1405]]
+[[is:1405]]
+[[it:1405]]
+[[ja:1405年]]
+[[jv:1405]]
+[[ka:1405]]
+[[ko:1405년]]
+[[ksh:Joohr 1405]]
+[[la:1405]]
+[[lb:1405]]
+[[lt:XV amžiaus 1-as dešimtmetis#1405]]
+[[map-bms:1405]]
+[[mi:1405]]
+[[mk:1405]]
+[[mr:इ.स. १४०५]]
+[[ms:1405]]
+[[nah:1405]]
+[[nap:1405]]
+[[nds-nl:1405]]
+[[new:१४०५]]
+[[nl:1405]]
+[[nn:1405]]
+[[no:1405]]
+[[nrm:1405]]
+[[oc:1405]]
+[[os:1405]]
+[[pi:१४०५]]
+[[pl:1405]]
+[[pt:1405]]
+[[ro:1405]]
+[[ru:1405 год]]
+[[sa:१४०५]]
+[[scn:1405]]
+[[sk:1405]]
+[[sl:1405]]
+[[sq:1405]]
+[[sr:1405]]
+[[su:1405]]
+[[sv:1405]]
+[[sw:1405]]
+[[th:พ.ศ. 1948]]
+[[tl:1405]]
+[[tr:1405]]
+[[tt:1405]]
+[[uk:1405]]
+[[uz:1405]]
+[[vec:1405]]
+[[vo:1405]]
+[[zea:1405]]
+[[zh:1405年]]
+[[zh-yue:1405年]]
