--- a/1424.mw
+++ b/1424.mw
@@ -2,3 +2,96 @@
 *[[Anselmus Adornes]]
 
 [[Categorie: 1420-1429]]
+
+[[af:1424]]
+[[am:1424 እ.ኤ.አ.]]
+[[an:1424]]
+[[ar:1424]]
+[[ast:1424]]
+[[az:1424]]
+[[be:1424]]
+[[be-x-old:1424]]
+[[bg:1424]]
+[[bh:१४२४]]
+[[bn:১৪২৪]]
+[[bpy:মারি ১৪২৪]]
+[[br:1424]]
+[[bs:1424]]
+[[ca:1424]]
+[[co:1424]]
+[[cs:1424]]
+[[csb:1424]]
+[[cv:1424]]
+[[cy:1424]]
+[[da:1424]]
+[[de:1424]]
+[[el:1424]]
+[[en:1424]]
+[[eo:1424]]
+[[es:1424]]
+[[et:1424]]
+[[eu:1424]]
+[[fi:1424]]
+[[fr:1424]]
+[[fy:1424]]
+[[gd:1424]]
+[[gl:1424]]
+[[he:1424]]
+[[hi:1424]]
+[[hr:1424.]]
+[[ht:1424 (almanak jilyen)]]
+[[hu:1424]]
+[[hy:1424]]
+[[ia:1424]]
+[[id:1424]]
+[[io:1424]]
+[[is:1424]]
+[[it:1424]]
+[[ja:1424年]]
+[[jv:1424]]
+[[ka:1424]]
+[[ko:1424년]]
+[[ksh:Joohr 1424]]
+[[la:1424]]
+[[lb:1424]]
+[[lmo:1424]]
+[[lt:XV amžiaus 3-as dešimtmetis#1424]]
+[[map-bms:1424]]
+[[mi:1424]]
+[[mk:1424]]
+[[mr:इ.स. १४२४]]
+[[ms:1424]]
+[[nah:1424]]
+[[nap:1424]]
+[[nds-nl:1424]]
+[[new:१४२४]]
+[[nl:1424]]
+[[nn:1424]]
+[[no:1424]]
+[[nrm:1424]]
+[[oc:1424]]
+[[os:1424]]
+[[pi:१४२४]]
+[[pl:1424]]
+[[pt:1424]]
+[[ro:1424]]
+[[ru:1424 год]]
+[[sa:१४२४]]
+[[scn:1424]]
+[[simple:1424]]
+[[sk:1424]]
+[[sl:1424]]
+[[sq:1424]]
+[[sr:1424]]
+[[su:1424]]
+[[sv:1424]]
+[[sw:1424]]
+[[th:พ.ศ. 1967]]
+[[tl:1424]]
+[[tr:1424]]
+[[uk:1424]]
+[[uz:1424]]
+[[vec:1424]]
+[[vo:1424]]
+[[zh:1424年]]
+[[zh-yue:1424年]]
