--- a/1452.mw
+++ b/1452.mw
@@ -3,3 +3,98 @@
 *[[15 april|15]] - [[Leonardo da Vinci]]
 
 [[Categorie: 1450-1459]]
+
+[[af:1452]]
+[[am:1452 እ.ኤ.አ.]]
+[[an:1452]]
+[[ar:1452]]
+[[ast:1452]]
+[[az:1452]]
+[[be:1452]]
+[[be-x-old:1452]]
+[[bg:1452]]
+[[bh:१४५२]]
+[[bn:১৪৫২]]
+[[bpy:মারি ১৪৫২]]
+[[br:1452]]
+[[bs:1452]]
+[[ca:1452]]
+[[co:1452]]
+[[cs:1452]]
+[[csb:1452]]
+[[cv:1452]]
+[[cy:1452]]
+[[da:1452]]
+[[de:1452]]
+[[el:1452]]
+[[en:1452]]
+[[eo:1452]]
+[[es:1452]]
+[[et:1452]]
+[[eu:1452]]
+[[fi:1452]]
+[[fr:1452]]
+[[fy:1452]]
+[[ga:1452]]
+[[gd:1452]]
+[[gl:1452]]
+[[he:1452]]
+[[hi:1452]]
+[[hr:1452.]]
+[[ht:1452 (almanak jilyen)]]
+[[hu:1452]]
+[[hy:1452]]
+[[ia:1452]]
+[[id:1452]]
+[[io:1452]]
+[[is:1452]]
+[[it:1452]]
+[[ja:1452年]]
+[[jbo:1452moi nanca]]
+[[jv:1452]]
+[[ka:1452]]
+[[ko:1452년]]
+[[ksh:Joohr 1452]]
+[[la:1452]]
+[[lb:1452]]
+[[lmo:1452]]
+[[lt:XV amžiaus 6-as dešimtmetis#1452]]
+[[map-bms:1452]]
+[[mi:1452]]
+[[mk:1452]]
+[[mr:इ.स. १४५२]]
+[[ms:1452]]
+[[nah:1452]]
+[[nap:1452]]
+[[new:१४५२]]
+[[nl:1452]]
+[[nn:1452]]
+[[no:1452]]
+[[nrm:1452]]
+[[oc:1452]]
+[[os:1452]]
+[[pi:१४५२]]
+[[pl:1452]]
+[[pt:1452]]
+[[ro:1452]]
+[[ru:1452 год]]
+[[sa:१४५२]]
+[[scn:1452]]
+[[simple:1452]]
+[[sk:1452]]
+[[sl:1452]]
+[[sq:1452]]
+[[sr:1452]]
+[[su:1452]]
+[[sv:1452]]
+[[sw:1452]]
+[[th:พ.ศ. 1995]]
+[[tl:1452]]
+[[tr:1452]]
+[[tt:1452]]
+[[uk:1452]]
+[[uz:1452]]
+[[vec:1452]]
+[[vo:1452]]
+[[zh:1452年]]
+[[zh-yue:1452年]]
