--- a/1480.mw
+++ b/1480.mw
@@ -2,3 +2,95 @@
 ;januoari
 *[[10 januoari|10]] - [[Margaretha van Oostnryk (1480-1530)]]
 [[Categorie: 1480-1489]]
+
+[[af:1480]]
+[[am:1480 እ.ኤ.አ.]]
+[[an:1480]]
+[[ar:1480]]
+[[ast:1480]]
+[[az:1480]]
+[[be:1480]]
+[[be-x-old:1480]]
+[[bg:1480]]
+[[bh:१४८०]]
+[[bn:১৪৮০]]
+[[bpy:মারি ১৪৮০]]
+[[br:1480]]
+[[bs:1480]]
+[[ca:1480]]
+[[ceb:1480]]
+[[co:1480]]
+[[cs:1480]]
+[[cv:1480]]
+[[cy:1480]]
+[[da:1480]]
+[[de:1480]]
+[[el:1480]]
+[[en:1480]]
+[[eo:1480]]
+[[es:1480]]
+[[et:1480]]
+[[eu:1480]]
+[[fi:1480]]
+[[fr:1480]]
+[[fy:1480]]
+[[gd:1480]]
+[[gl:1480]]
+[[he:1480]]
+[[hi:1480]]
+[[hr:1480.]]
+[[ht:1480 (almanak jilyen)]]
+[[hu:1480]]
+[[hy:1480]]
+[[ia:1480]]
+[[id:1480]]
+[[io:1480]]
+[[is:1480]]
+[[it:1480]]
+[[ja:1480年]]
+[[jv:1480]]
+[[ka:1480]]
+[[ko:1480년]]
+[[ksh:Joohr 1480]]
+[[la:1480]]
+[[lb:1480]]
+[[lij:1480]]
+[[lt:XV amžiaus 8-as dešimtmetis#1480]]
+[[map-bms:1480]]
+[[mi:1480]]
+[[mk:1480]]
+[[mr:इ.स. १४८०]]
+[[ms:1480]]
+[[nah:1480]]
+[[nap:1480]]
+[[new:१४८०]]
+[[nl:1480]]
+[[nn:1480]]
+[[no:1480]]
+[[nrm:1480]]
+[[oc:1480]]
+[[os:1480]]
+[[pi:१४८०]]
+[[pl:1480]]
+[[pt:1480]]
+[[ro:1480]]
+[[ru:1480 год]]
+[[sa:१४८०]]
+[[scn:1480]]
+[[simple:1480]]
+[[sk:1480]]
+[[sl:1480]]
+[[sq:1480]]
+[[sr:1480]]
+[[su:1480]]
+[[sv:1480]]
+[[sw:1480]]
+[[th:พ.ศ. 2023]]
+[[tl:1480]]
+[[tr:1480]]
+[[tt:1480]]
+[[uk:1480]]
+[[uz:1480]]
+[[vec:1480]]
+[[zh:1480年]]
+[[zh-yue:1480年]]
