--- a/1483.mw
+++ b/1483.mw
@@ -2,3 +2,95 @@
 *[[Anselmus Adornes]]
 
 [[Categorie: 1480-1489]]
+
+[[af:1483]]
+[[am:1483 እ.ኤ.አ.]]
+[[an:1483]]
+[[ar:1483]]
+[[ast:1483]]
+[[az:1483]]
+[[be:1483]]
+[[be-x-old:1483]]
+[[bg:1483]]
+[[bh:१४८३]]
+[[bn:১৪৮৩]]
+[[bpy:মারি ১৪৮৩]]
+[[br:1483]]
+[[bs:1483]]
+[[ca:1483]]
+[[co:1483]]
+[[cs:1483]]
+[[cv:1483]]
+[[cy:1483]]
+[[da:1483]]
+[[de:1483]]
+[[el:1483]]
+[[en:1483]]
+[[eo:1483]]
+[[es:1483]]
+[[et:1483]]
+[[eu:1483]]
+[[fa:۱۴۸۳ (میلادی)]]
+[[fi:1483]]
+[[fr:1483]]
+[[fy:1483]]
+[[gd:1483]]
+[[gl:1483]]
+[[he:1483]]
+[[hi:1483]]
+[[hr:1483.]]
+[[ht:1483 (almanak jilyen)]]
+[[hu:1483]]
+[[hy:1483]]
+[[ia:1483]]
+[[id:1483]]
+[[io:1483]]
+[[is:1483]]
+[[it:1483]]
+[[ja:1483年]]
+[[jv:1483]]
+[[ka:1483]]
+[[ko:1483년]]
+[[ksh:Joohr 1483]]
+[[la:1483]]
+[[lb:1483]]
+[[lmo:1483]]
+[[lt:XV amžiaus 9-as dešimtmetis#1483]]
+[[map-bms:1483]]
+[[mi:1483]]
+[[mk:1483]]
+[[mr:इ.स. १४८३]]
+[[ms:1483]]
+[[nah:1483]]
+[[nap:1483]]
+[[nds:1483]]
+[[new:१४८३]]
+[[nl:1483]]
+[[nn:1483]]
+[[no:1483]]
+[[nrm:1483]]
+[[oc:1483]]
+[[os:1483]]
+[[pi:१४८३]]
+[[pl:1483]]
+[[pt:1483]]
+[[ro:1483]]
+[[ru:1483 год]]
+[[sa:१४८३]]
+[[scn:1483]]
+[[simple:1483]]
+[[sk:1483]]
+[[sl:1483]]
+[[sq:1483]]
+[[sr:1483]]
+[[su:1483]]
+[[sv:1483]]
+[[sw:1483]]
+[[th:พ.ศ. 2026]]
+[[tl:1483]]
+[[tr:1483]]
+[[uk:1483]]
+[[uz:1483]]
+[[vec:1483]]
+[[zh:1483年]]
+[[zh-yue:1483年]]
