--- a/1491.mw
+++ b/1491.mw
@@ -3,3 +3,96 @@
 *[[28 juni|28]] - [[Hendrik VIII van Iengeland]]
 
 [[Categorie: 1490-1499]]
+
+[[af:1491]]
+[[am:1491 እ.ኤ.አ.]]
+[[an:1491]]
+[[ar:1491]]
+[[ast:1491]]
+[[az:1491]]
+[[be:1491]]
+[[be-x-old:1491]]
+[[bg:1491]]
+[[bh:१४९१]]
+[[bn:১৪৯১]]
+[[bpy:মারি ১৪৯১]]
+[[br:1491]]
+[[bs:1491]]
+[[ca:1491]]
+[[co:1491]]
+[[cs:1491]]
+[[cv:1491]]
+[[cy:1491]]
+[[da:1491]]
+[[de:1491]]
+[[el:1491]]
+[[en:1491]]
+[[eo:1491]]
+[[es:1491]]
+[[et:1491]]
+[[eu:1491]]
+[[fi:1491]]
+[[fr:1491]]
+[[fy:1491]]
+[[ga:1491]]
+[[gd:1491]]
+[[gl:1491]]
+[[he:1491]]
+[[hi:1491]]
+[[hr:1491.]]
+[[ht:1491 (almanak jilyen)]]
+[[hu:1491]]
+[[hy:1491]]
+[[ia:1491]]
+[[id:1491]]
+[[io:1491]]
+[[is:1491]]
+[[it:1491]]
+[[ja:1491年]]
+[[jv:1491]]
+[[ka:1491]]
+[[ko:1491년]]
+[[ksh:Joohr 1491]]
+[[la:1491]]
+[[lb:1491]]
+[[lmo:1491]]
+[[lt:XV amžiaus 10-as dešimtmetis#1491]]
+[[map-bms:1491]]
+[[mi:1491]]
+[[mk:1491]]
+[[mr:इ.स. १४९१]]
+[[ms:1491]]
+[[nah:1491]]
+[[nap:1491]]
+[[nds:1491]]
+[[new:१४९१]]
+[[nl:1491]]
+[[nn:1491]]
+[[no:1491]]
+[[nrm:1491]]
+[[oc:1491]]
+[[os:1491]]
+[[pi:१४९१]]
+[[pl:1491]]
+[[pt:1491]]
+[[ro:1491]]
+[[ru:1491 год]]
+[[sa:१४९१]]
+[[scn:1491]]
+[[simple:1491]]
+[[sk:1491]]
+[[sl:1491]]
+[[sq:1491]]
+[[sr:1491]]
+[[su:1491]]
+[[sv:1491]]
+[[sw:1491]]
+[[th:พ.ศ. 2034]]
+[[tl:1491]]
+[[tr:1491]]
+[[tt:1491]]
+[[uk:1491]]
+[[uz:1491]]
+[[vec:1491]]
+[[zh:1491年]]
+[[zh-yue:1491年]]
